Куча исправлений по замечаниям Костенко от 05.07.21.

--- a/Dissertation/partAllocation.tex
+++ b/Dissertation/partAllocation.tex
@@ -132,7 +132,7 @@
 %         \text{\Large0}    &     &         & R^T
 %     \end{pNiceMatrix}
 % \end{equation}
-% \noindent где:
+% \noindent где
 % \begin{itemize}
 %     \item $I^{n_f\times n_f} \in \mathspace{R}^{n_f \times n_f}$ -- единичная диагональная матрица;
 % \end{itemize}
@@ -303,9 +303,9 @@
 
 Положим что вектор управления определен как $\nu \in \mathspace{R}^n$, где $n$ -- количество управляемых степеней свободы и пусть ПА оснащен маршевой группой из $m$ движителей, $p$ подруливающими движителями и $q$ рулевыми устройствами.
 Тогда эта взаимосвязь может быть сформирована следующим образом \cite{10.1002, 10.1016/j.automatica.2013.01.035}:
-\begin{equation}
+\begin{equation*}
     \vect{\nu} = BK(v, \alpha, \beta) \vect{u}
-\end{equation}
+\end{equation*}
 \noindent где $B \in \mathspace{R}^{n \times (m+p+q)}$ -- матрица геометрии ДРК, а $K(v, \alpha, \beta) \in \mathspace{R}^{n \times (m+p+q)}$ -- матрица матрица коэфициентов влияния набегающего потока, $v, \alpha, \beta$ -- соответственно, скорость набегающего потока, угол атаки и угол дрейфа ПА.
 
 Все элементы в правой части выражения разумно разделить на три группы следующим образом:
@@ -316,7 +316,7 @@
         \vect{u} = \left( \vect{u}_{m}^T, \vect{u}_{t}^T, \vect{u}_{r}^T \right)^T
     \end{array}
 \end{equation*}
-\noindent где:
+\noindent где
 \begin{itemize}
     \item $B_m \in \mathspace{R}^{n \times m}, B_t \in \mathspace{R}^{n \times p}$ -- соответственно, матрица геометрии маршевой и подруливающей группы, а $I_{\text{r}}^{n \times q}$ -- единичная диагональная матрица, т.к. поведение рулевой группы полностью определяется матрицей коэффициентов $K_r$.
     \item $K_{\text{t}}, K_{\text{r}}$ -- соответственно, матрица коэффициентов поведения ИМ в потоке подруливающей и рулевой группы. $I_{\text{m}}^{n \times m}$ -- единичная матрица, т.к. на данном уровне абстрагирования зависимость упора формируемого маршевой группой от потока не существенна и будет компенсирована при формировании управляющих команд для электроприводов маршевых движителей.
@@ -336,7 +336,7 @@
         [C^1 \times P^1]_z & \ldots & [C^{n} \times P^{n}]_z \\
     \end{pmatrix}
 \end{equation}
-\noindent где:
+\noindent где
 \begin{itemize}
     \item $(P^i_x, P^i_y,P^i_z)$ -- координаты точки крепления движителя с номером $i$ в ССК;
     \item $(C^i_x, C^i_y, C^i_z)$ -- направляющие косинусы единичного вектора, направленного вдоль линии действия фиксированного движителя с номером $i$ в ССК;
@@ -355,7 +355,7 @@
         0 & 0 & \ldots & e^{-c_3\frac{v}{u_j}} \\
     \end{pmatrix}
 \end{equation}
-\noindent где:
+\noindent где
 \begin{itemize}
     \item $c_i$ -- коэффициент подавления упора для $i$-го подруливающего движителя;
     \item $v$ -- скорость набегающего потока;
@@ -363,7 +363,7 @@
 \end{itemize}
 
 Матрица коэффициентов рулевой группы может быть сформирована из математической модели рулевых устройств (уравнение \ref{eq:modelling-rudder}) следующим образом:
-\begin{equation}
+\begin{equation*}
     K_r = 
     \frac{1}{2}\rho U
     \begin{pmatrix}
@@ -374,8 +374,8 @@
         m_y^{1} v^2 & m_y^{2} v^2 & \ldots & m_y^{q} v^2 \\
         m_z^{1} v^2 & m_z^{2} v^2 & \ldots & m_z^{q} v^2 \\
     \end{pmatrix}
-\end{equation}
-\noindent где:
+\end{equation*}
+\noindent где
 \begin{itemize}
     \item $t_j^{i}, m_j^{i}$ -- соответственно, линейные и вращательные производные гидродинамических характеристик $i$-го руля относительно $j$-оси;
     \item $\rho$ -- плотность воды;
@@ -394,7 +394,7 @@
     	\vect{\nu} = BK(v)\vect{u}, u \in \mathspace{U}
 	\end{matrix}
 \end{equation}
-\noindent где:
+\noindent где
 \begin{itemize}
 	\item $\vect{\nu}$ -- вектор управления движением ПА;
 	\item $\vect{u}$ -- вектор управления ИМ ДРК;
@@ -411,7 +411,7 @@
     J = (1-\varepsilon)(BK(v)\vect{u} - \vect{\nu})^TQ_{\nu}(BK(v)\vect{u} - \vect{\nu}) + \varepsilon 
     \vect{u}^TQ_{u}\vect{u}
 \end{equation}
-\noindent где:
+\noindent где
 \begin{itemize}
     \item $\varepsilon$ -- весовой коэффициент отклика системы на управление, $0 < \varepsilon < 1$;
     \item $Q_{\nu}$ -- диагональная матрица положительно определенных весовых коэффициентов осей управления;
@@ -424,18 +424,18 @@
 Для использования в операционных системах реального времени метод решения оптимизационной задачи по заданному функционалу (выражение \ref{eq:functional_weight}) должен быть эффективен, прост и выполняться за определенное фиксированное время или поддерживать ``горячий'' старт, т.е. на следующей итерации работы СУ ПА он должен быть в состоянии продолжить вычисление оптимального управления с точки, на которой остановился в рамках предыдущего цикла.
 
 В случае если рассматривается задача не предусматривающая ограничений (т.е. $\mathspace{U} = \mathspace{R}$) или решение задачи оптимального управления укладывается в заданные ограничения, т.е. $\vect{u^*} \in \mathspace{U}$, то решение можно получить аналитически через частную производную от функционала $\frac{\partial J}{\partial u}$. Тогда вектор оптимального управления будет следующим:
-\begin{equation}
+\begin{equation*}
     \vect{u^*} = (1-\epsilon)\left[(1-\epsilon)(BK(v))^{-1}Q_{\nu}BK(v) + \epsilon Q_u\right](BK(v))^TQ_{\nu} \vect{\nu}_c
-\end{equation}
+\end{equation*}
 
 Если целевое $\vect{\nu}_c$ не реализуемо в рамках заданных ограничений на ИМ $\mathspace{U}$, то при решении задачи используют стандартные методы решения квадратичных оптимизационных задач с ограничениями \cite{luenberger1984linear}, но общие методы зачастую редко реализуемы в рамках операционных систем реального времени в виду отсутствия строгих критериев завершения итерационного поиска оптимума.
 
 В статьях \cite{burken2001two, lu1996constrained} показано что в случае ограничений вида \ref{eq:bounds} глобально-сходящееся решение может быть найдено достаточно просто.
 
-\begin{equation*}
+\begin{equation}
     \label{eq:bounds}
     \overline{u_i}<u_i<\underline{u_i} \: \forall \: u_i \in \vect{u}
-\end{equation*}
+\end{equation}
 \noindent где $\overline{u_i}, \underline{u_i}$ соответственно максимальная и минимальная величина управления $i$-ым исполнительным механизмом.
 
 Пусть задана функция насыщения $\text{sat}(\vect{x}): \mathspace{R}^n \rightarrow \mathspace{R}^n$ и результат её действия $\vect{y}=\text{sat}(\vect{x})$ определяется следующим образом:
@@ -450,7 +450,7 @@
      \right.
 \end{equation*}
 
-Тогда инеративное решение оптимизационной задачи \ref{eq:Allocation/Problem} может быть найдено через теорему о неподвижной точке следующим образом:
+Тогда итерационное решение оптимизационной задачи \ref{eq:Allocation/Problem} может быть найдено через теорему о неподвижной точке следующим образом:
 \begin{equation}
 	\label{eq:Allocation/FixedMethod}
     \vect{u}_{n+1} = \text{sat}
@@ -458,7 +458,7 @@
     (1-\varepsilon)\omega (BK(v))^TQ_{\nu}\nu - (\omega H - I) \vect{u}_{n}
     \right]
 \end{equation}
-\noindent где:
+\noindent где
 \begin{itemize}
 	\item $H=(1 - \varepsilon)(BK(v))^TQ_{\nu}B + \varepsilon Q_u$;
 	\item $\omega = 1 / ||H||_2$, где $||\cdot||_2$ -- норма оператора в $L_2$;
@@ -497,10 +497,10 @@
 Он предназначен для проведения подводных работ на глубинах до 300 метров.
 
 АНПА оснащен четырьмя симметрично расположеными относительно продольной оси ПА маршевыми движителями. 
-Они установлены в корме аппарата с углом наклона относительно продольной оси ПА $\alpha$.
+Они установлены в корме аппарата с углом наклона относительно продольной оси ПА $\delta$.
 Для возможности управления при малых скоростях (в диапазоне скоростей 0 - 1.0 м/с) он дополнительно оборудован двумя подруливающими движителями в носовой части аппарата -- одним вертикальным и одним горизонтальным.
 
-Переменные $L_s^x, L_s^y, L_s^z$ определяют, соответственно, проекцию расстояния от точки крепления кормовых движителей до ЦМ ПА на продольную, поперечную и нормальную оси.
+Конструктивные параметры ДРК $L_s^x, L_s^y, L_s^z$ определяют, соответственно, проекцию расстояния от точки крепления кормовых движителей до ЦМ ПА на продольную, поперечную и нормальную оси.
 В силу симметрии расположения движителей $|L_s^y| = |L_s^z|$ для всех движителей маршевой группы.
 Переменные $L_{tv}$ и $L_{th}$ определяют, соответственно, расстояния от точки крепления вертикального и горизонтального подруливающего движителя до ЦМ ПА.
 
@@ -528,7 +528,7 @@
         \toprule
         Наименование & Величина \\ 
         \midrule
-        $\alpha$ & 22.5$^{\circ}$ \\
+        $\delta$ & 22.5$^{\circ}$ \\
         $L_s^x$ & 1.60 м \\
         $L_s^y$ & 0.14 м \\
         $L_{tv}$ & 0.3 м \\
@@ -548,10 +548,10 @@
         \midrule
         \multicolumn{3}{c}{Маршевые движители} \\
         \midrule
-        Нижний  & (0, -$\alpha$) & (-$L_s^x$,0,$L_s^y$) \\
-        Верхний & (0, $\alpha$)  & (-$L_s^x$,0,-$L_s^y$) \\
-        Левый   & (-$\alpha$, 0) & (-$L_s^x$,-$L_s^y$,0) \\
-        Правый  & ($\alpha$, 0)  & (-$L_s^x$,$L_s^y$,0) \\
+        Нижний  & (0, -$\delta$) & (-$L_s^x$,0,$L_s^y$) \\
+        Верхний & (0, $\delta$)  & (-$L_s^x$,0,-$L_s^y$) \\
+        Левый   & (-$\delta$, 0) & (-$L_s^x$,-$L_s^y$,0) \\
+        Правый  & ($\delta$, 0)  & (-$L_s^x$,$L_s^y$,0) \\
         \midrule
         \multicolumn{3}{c}{Подруливающие движители} \\
         \midrule
@@ -573,23 +573,23 @@
         b_d, b_u, b_l, b_r, b_h, b_v
     \end{pmatrix}
 \end{equation}
-\noindent где:
+\noindent где
 \begin{equation*}
     b_d = 
     \begin{pmatrix}
-        \cos{\alpha} \\
+        \cos{\delta} \\
         0 \\
-        -\sin{\alpha} \\
-        \cos{\alpha} \cdot L_s^y - \sin{\alpha} \cdot L_s^x \\
+        -\sin{\delta} \\
+        \cos{\delta} \cdot L_s^y - \sin{\delta} \cdot L_s^x \\
         0
     \end{pmatrix}
     ;\:
     b_u = 
     \begin{pmatrix}
-        \cos{\alpha} \\
+        \cos{\delta} \\
         0 \\
-        \sin{\alpha} \\
-        -\cos{\alpha} \cdot L_s^y + \sin{\alpha} \cdot L_s^x \\
+        \sin{\delta} \\
+        -\cos{\delta} \cdot L_s^y + \sin{\delta} \cdot L_s^x \\
         0
     \end{pmatrix}
 \end{equation*}
@@ -597,20 +597,20 @@
 \begin{equation*}
     b_l = 
     \begin{pmatrix}
-        \cos{\alpha} \\
-        -\sin{\alpha} \\
+        \cos{\delta} \\
+        -\sin{\delta} \\
         0 \\
         0 \\
-        -\cos{\alpha} \cdot L_s^y - \sin{\alpha} \cdot L_s^x
+        -\cos{\delta} \cdot L_s^y - \sin{\delta} \cdot L_s^x
     \end{pmatrix}
     ;\:
     b_r = 
     \begin{pmatrix}
-        \cos{\alpha} \\
-        \sin{\alpha} \\
+        \cos{\delta} \\
+        \sin{\delta} \\
         0 \\
         0 \\
-        \cos{\alpha} \cdot L_s^y +  \sin{\alpha} \cdot L_s^x
+        \cos{\delta} \cdot L_s^y +  \sin{\delta} \cdot L_s^x
     \end{pmatrix}
 \end{equation*}
 
@@ -639,12 +639,12 @@
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{allocation/MMT-300 - Швартовая характеристика.png}
-    \caption{Швартовная характеристика движителей АНПА ``ММТ-300''.}
+    \caption{Швартовная статическая характеристика движителей АНПА ``ММТ-300''.}
     \label{fig:mmt-300-bollard-pull}
 \end{figure}
 
 \subsection{Статический сравнительный анализ работы адаптивного метода} \label{sec:Allocation/StaticTest}
-Для статического сравнительного анализа работы адаптивного метода был проведен анализ результатов решения задачи управления ДРК ПА для случайного вектора целевого управления движением ПА $\vect{v_r}$ \cite{kostenko2021comparative, костенко2020анализ}.
+Для статического сравнительного анализа работы адаптивного метода был проведен анализ результатов решения задачи управления ДРК ПА для случайного перебора вектора целевого управления движением ПА $\vect{v_r}$ \cite{kostenko2021comparative, костенко2020анализ}.
 
 В качестве параметров сравнения различных методов управления ДРК были взяты следующие величины:
 \begin{itemize}
@@ -665,9 +665,9 @@
 \end{equation*}
 \noindent где $\vect{u}^*_i$ -- вектор управления ДРК полученный путем решения задачи управления ДРК заданным методом для $\vect{v}_i$, где, в свою очередь, $\vect{v}_i$ определено следующим выражением:
 
-\begin{equation}
+\begin{equation*}
     \vect{v}_i = B \vect{u}^l_i  
-\end{equation}
+\end{equation*}
 
 Пример проекции области допустимых значений для метода линейных ограничений и фиксированной точки на оси $T_x-M_y-M_z$ представлен на рисунке \ref{fig:mmt-300-feasible-set-3d}.
 Проекции областей допустимых значений на оси $Tx-My$ для всех методов представлен на рисунке \ref{fig:mmt-300-feasible-set}.
@@ -693,6 +693,9 @@
 \end{equation*}
 \noindent где $k_i$ -- некоторые коэффициенты.
 
+% \begin{notequestion}
+% 	Сущность этих коэффициентов и их численное значение для сравнительного анализа не важны
+% \end{notequestion}
 В качестве нормы невязки управления была использована евклидова норма разности целевого и результирующего векторов управления $||\vect{s}|| =\vect{v_r} - B\vect{u^*}||$.
 
 Все расчёты приведены в относительные единицы по каждому из параметров исследования.
@@ -702,7 +705,7 @@
 \begin{equation*}
     P_r = \left( \frac{P_a}{P_a^{min}} - 1 \right) * 100\%
 \end{equation*}
-\noindent где:
+\noindent где
 \begin{itemize}
     \item $P_r$ -- значение параметра в относительных единицах;
     \item $P_a$ -- значение параметра в абсолютных единицах единицах;
@@ -779,7 +782,7 @@
 \begin{equation*}
     \vect{u^*} = C\vect{\alpha}\vect{\nu_c}
 \end{equation*}
-\noindent где:
+\noindent где
 \begin{itemize}
     \item $C = W^{-1}B(v)^T(B(v)W^{-1}B(v)^T)^{-1}$ -- решение оптимальной задачи управления ДРК через псевдообратную матрицу Мура-Пенроуза для случая $\mathspace{U}=\mathspace{R}$;
     \item $\vect{\alpha}$ -- вектор линейных сжимающих коэффициентов, которые обеспечивают удержание $\vect{u}^*$ внутри подмножества допустимых значений $\mathspace{U}$;
@@ -801,7 +804,7 @@
 \end{equation*}
 
 \subsubsection{Методология проведения моделирования}
-Было осуществено моделирование управления ДРК при продольном движении аппарата с одновременным созданием момента по каналу дифферента.
+Было осуществено моделирование маневра по глубине, т.е. управление ДРК при продольном движении аппарата с одновременным созданием момента по каналу дифферента.
 Вектор целевого управления движением ПА $\vect{\nu_c}$ в BODY ССК выглядит следующим образом: $\vect{\nu_c} \equiv \vect{f}^b_c = [f_x, f_y, f_z, m_y, m_z]$, где $f_x,\: f_y,\: f_z$ -- соответственно, проекция целевой силы на продольную, поперечную и нормальную ось, а $m_y,\: m_z$ -- сответствующие проекции целевого момента.
 В моделируемом случае целевая сила определяется следующим выражением:
 
@@ -889,7 +892,6 @@
 \end{figure}
 
 \section{Прикладная реализация разработанного метода} \label{sec:Allocation/Software}
-Планируется разработать программный модуль на языке С++ для реализации предлагаемого метода адаптивного управления ДРК ПА.
 Структура современных СУ АНПА разрабатываемых в ИПМТ ДВО РАН имеет модульный принцип построения \cite{борейко2019система, инзарцев2015реконфигурируемая}, т.е. представляет собой совокупность независимых функционально завершенных исполняемых файлов взаимодействие между которыми происходит заранее сформированными сообщениями.
 Взаимодействие между модулями обеспечивается системой передачи сообщений IPC, подробности работы которой описаны в статье \cite{pavin2016reconfigurable}.
 
