--- a/Dissertation/partPropulsion.tex
+++ b/Dissertation/partPropulsion.tex
@@ -3,7 +3,7 @@
 Исполнительные механизмы ДРК определяют эффективность траекторного маневрирования НПА, а также возможность его динамического позиционирования в точке или зависания в толще воды \cite{костенко2017оценка}.
 На практике используются различные конструктивные схемы ДРК, в состав которых могут входить маршевые и подруливающие движители, носовые и кормовые рулевые устройства.
 
-Наиболее распространенными типами движителей являются гребные винты в насадке и водометные движители, которые могут устанавливаться стационарно на корпусе аппарата или на поворотных кронштейнах, которые поворачиваются на требуемый угол в плоскости или пространстве для изменения направления действия силы тяги.
+Наиболее распространенными типами движителей являются гребные винты в насадке и водометные движители, которые могут устанавливаться стационарно на корпусе аппарата или на поворотных кронштейнах способные поворачиваться на требуемый угол в плоскости или пространстве для изменения направления действия силы тяги.
 При этом использование водометных движителей ограничено их сравнительно низким КПД (0.5–0.55) по сравнению с гребными винтами, у которых он может достигать значений 0.7–0.75 \cite{инзарцев2018подводные}. Гораздо меньший КПД имеют такие экзотические движительные установки, как крыльчатые, волновые или машущие. 
 
 Рулевые устройства, использующие гидродинамические крылья в качестве исполнительного органа, как известно, имеют низкую эффективность при малых скоростях набегающего потока \cite{агеев2015авто}.
@@ -14,35 +14,41 @@
 
 \section{Математичечская модель маршевого движителя ПА}
 
-\begin{noteplan}
-	Тут потом перемоделю через StateSpace вид с учетом особенностей BLDC приводов.
-\end{noteplan}
-
 Это один или несколько кормовых движителей, обеспечивающих продольное движение аппарата, а также возможность маневрирования по глубине и курсу.
 
 В работе \cite{10.1109/48.107145} была предложена модель движителя заданная в форме пространства состояний по входному параметру $n$ где $n$ -- скорость вращения вала:
-\begin{gather}
+\begin{equation}
     \label{eq:thruster_dynamic_1}
-    J_m\dot{n} + K_{n|n|}n|n| = Q \\
-    T = T(n, u_p)
-\end{gather}
+    \begin{array}{c}
+        J_p\dot{n} + K_{n|n|}n|n| = Q \\
+        T = T(n, u_p)
+    \end{array}
+\end{equation}
 
-\noindent где:
+\noindent где
 \begin{itemize}
     \item $Q$ -- момент сопротивления вращению на валу привода;
-    \item $J_m$ -- момент инерции на привода/пропеллера (кг$\cdot$м$^2$);
+    \item $J_p$ -- момент инерции с учётом присоедённого момента воды (кг$\cdot$м$^2$);
     \item $K_{n|n|}$ -- нелинейный коэффициент демпфирования мотора (кг$\cdot$м$^2$);
     \item $u_p$ -- скорость потока в канале движителя;
 \end{itemize}
 
+% \begin{notequestion}
+%     $K_{n|n|}$ -- Nonlinear motor damping coefficient (kgm$^2$)
+
+%     $u_p$ Axial flow velocity in propeller disc (m/s).
+
+%     По статье \cite{10.1109/48.838987}
+% \end{notequestion}
+
 Коэффициент $K_{n|n|}$ определяется следующим образом:
-\begin{gather}
+\begin{gather*}
     K_{n|n|} = \frac{1}{2}\eta^3 \cdot p^3 \cdot \rho \cdot A \\
-    J_m = \eta^2 \cdot p^2 \cdot \rho \cdot V
-\end{gather}
-где:
+    J_p = \eta^2 \cdot p^2 \cdot \rho \cdot V
+\end{gather*}
+\noindent где
 \begin{itemize}
-    \item $\eta$ -- безразмерный коэффициент эффективности винта;
+    \item $\eta$ -- это безразмерный коэффициент эффективности винта;
     \item $p$ -- шаг винта (продольное расстояние которое винт за один оборот), (pitch);
     \item $A$ -- площадь сечения винта, (duct area);
     \item $V$ -- объем насадки в которой расположен винт.
@@ -50,13 +56,13 @@
 
 Позже модель, представленная уравнением \ref{eq:thruster_dynamic_1}, была усовершенствована в работе \cite{10.1109/48.468242} на основе исследований \cite{cody1992experimental, mclean1991dynamic}.
 Новая модель описывает вектором из двух состояний и записывается следующим образом:
-\begin{gather}
-    J_m\dot{n} + K_{n|n|}n|n| = Q_m- Q \\
+\begin{gather*}
+    J_p\dot{n} + K_{n|n|}n|n| = Q_m- Q \\
     m_f \dot{u_p} + d_f(u_p-u) |u_p - u| = T \\
     T = T(n,u_p) \\
     Q = Q(n,u_p)
-\end{gather}
-\noindent где:
+\end{gather*}
+\noindent где
 \begin{itemize}
     \item $Q_m$ -- момент на валу сформированный приводом (Нм);
     \item $m_f$ -- масса воды захватываемая винтом (кг);
@@ -67,13 +73,13 @@
 Экспериментальная проверка обоих подходов была проведена в работе \cite{whitcomb1999development}.
 
 Кроме того, в работе \cite{blanke2000dynamic} рассматривается трехэтапная модель винта, которая уже учитывает упрощённую модель ПА для более точного расчета скорости потока набегающего на грибной винт:
-\begin{gather}
-    J_m\dot{n} + K_{n|n|}n|n| = \tau - Q \\
+\begin{gather*}
+    J_p\dot{n} + K_{n|n|}n|n| = \tau - Q \\
     m_f \dot{u_p} + d_{f0}u_p + d_f|u_p|(u_p - u_a) = T \\
     (m - X_{\dot{u}})\dot{u} - X_u u - X_{u|u|}u|u| = (1-t)T\\
     T = T(n,n_p) \\
     Q = Q(n,n_p)
-\end{gather}
+\end{gather*}
 
 Последние исследования в области описания динамики движителя представлены в работе \cite{10.1109/robot.2005.1570115}.
 
@@ -82,43 +88,42 @@
 \subsection{Математическая модель гребного винта}
 
 Для гребного винта с фиксированным шагом, момент на валу $Q$ и сила (упор) вырабатываемая винтом $T$ зависит от продольной скорости движения аппарата $u$, скорости потока воды $u_a$, а так же скорости вращения винта $n$.
-Кроме этого на работу движителя влияют нестационарные потоки и различные эффекты которые влияют на эффективность работы движителя.
-В соответствии с работами \cite{newman2018marine, breslin1996hydrodynamics, carlton2018marine} к особо влияющим эффектам можно отнеси следующие:
+Кроме этого на работу движителя влияют нестационарные потоки которые влияют на эффективность работы движителя.
+В соответствии с работами \cite{newman2018marine, breslin1996hydrodynamics, carlton2018marine} к основным эффектом влияния можно отнести следующие:
 \begin{itemize}
     \item всасывание воздуха;
     \item кавитация;
     \item эффект Вагнера при вращении винта у раздела сред;
-    \item эффекты связанные с влиянием морских волн;
     \item эффект Куснера (срыв потока).
 \end{itemize}
 
 Приведенные факторы рассматриваются в основном в приложении к надводным судам.
-Для движителей подводных аппаратов, которые большую часть времени погружены под воду, первыми тремя эффектами можно пренебречь.
+Для движителей подводных аппаратов маневрирующих в толще воды на значительной глубине погружения.
 Эффект Куснера связанный со срывом потока связан с высокоамплитудными переключениями сигнала управления движителем и им также можно пренебречь.
 
 Квазистационарное моделирование тяги и крутящего момента движителя обычно происходит в терминах кривых подъемной силы и момент сопротивления, которые возможно преобразовать в тягу и момент.
 Подъемная сила и момент сопротивления обычно формируются через безразмерные коэффициенты упора $K_T$ и момента $K_Q$, которые рассчитываются на базе швартовых испытаний движителя.
 В ходе этих испытаний формируются кривые зависимости упора и момента от скорости вращения вала движителя
-\begin{gather}
-\label{eq:propeler_model}
-    K_T (J_0) = \frac{T}{\rho D^4 n |n|}, \:
-    K_Q (J_0) = \frac{Q}{\rho D^5 n |n|}
-\end{gather}
-\noindent где $D$ -- диаметр винта, $\rho$ -- плотность воды, а $J_0$ представляет собой относительную поступь и определяется следующим уравнением:
 \begin{equation}
-    J_0 = \frac{u_a}{nD}
+    \label{eq:propeler_model}
+    K_T (J_0) = \frac{T}{\rho D^4 n |n|}, \:
+    K_Q (J_0) = \frac{Q}{\rho D^5 n |n|}    
 \end{equation}
+\noindent где $D$ -- диаметр винта, $\rho$ -- плотность воды, а $J_0$ представляет собой относительную поступь и определяется следующим уравнением:
+\begin{equation*}
+    J_0 = \frac{u_a}{nD}
+\end{equation*}
 \noindent где $u_a$ -- скорость окружающей воды (совпадает со скоростью движения аппарата в случае установившегося движения).
 
-Численные расчеты коэффициентов $K_T$, $K_Q$ обычно проводят на натурных экспериментах в специальных бассейнах.
-При этом, обычно, нестационарными эффектами пренебрегают.
+Расчёт коэффициентов $K_T$, $K_Q$ обычно проводят на натурных экспериментах в специальных бассейнах.
+При этом нестационарными эффектами пренебрегают.
 
 В свою очередь, сами безразмерные коэффициенты $K_T$, $K_Q$ могут быть описаны как функции со следующими параметрами \cite{oosterveld1975further}:
-\begin{gather}
+\begin{gather*}
     K_T = f_1 \left( J_0, \frac{P}{D}, \frac{A_E}{A_0}, Z \right) \\
     K_Q = f_2 \left( J_0, \frac{P}{D}, \frac{A_E}{A_0}, Z, R_n, \frac{t}{c} \right) 
-\end{gather}
-\noindent где:
+\end{gather*}
+\noindent где
 \begin{itemize}
     \item $P/D$ -- шаговое отношение винта;
     \item $A_E/A_0$ -- отношение площади винта к площади движителя;
@@ -129,45 +134,47 @@
 \end{itemize}
 
 На основе уравнения \ref{eq:propeler_model} упор движителя и момент сопротивления может быть записан следующим образом \cite{пантов1973основы}:
-\begin{gather}
+\begin{equation}
     \label{eq:kt_kq}
-    T(n, J_0) = K_T (J_0) \rho D^4 n |n|\\
-    Q(n, J_0) = K_Q (J_0) \rho D^5 n |n|
-\end{gather}
+    \begin{array}{l}
+        T(n, J_0) = K_T (J_0) \rho D^4 n |n|\\
+        Q(n, J_0) = K_Q (J_0) \rho D^5 n |n|
+    \end{array}
+\end{equation}
 
 \subsection{Математическая модель привода движителя}
 
-Модель электропривода движителя обычно представляют следующим набором уравнений:
+Модель электропривода движителя обычно представляют следующим набором уравнений, которые описывают поведение мотора постоянного тока с независимым возбуждением \cite{zhao2015torque}:
 \begin{equation}
 	\label{eq:motor_model}
 	\begin{array}{ll}
-	L_a\frac{d}{dt}i_m &=-R_ai_m-K_m n + V_m \\
+	L_a\frac{d}{dt}i_m &=-R_ai_m-K_n n + V_m \\
     J_m\dot{n} &= K_m i_m - Q
 	\end{array}
 \end{equation}
 
-\noindent где:
+\noindent где
 \begin{itemize}
-    \item $V_m$ -- напряжение на обмотках привода (В);
-    \item $i_m$ -- ток на обмотках привода (А);
-    \item $n$ -- скорость вращения вала (об/с);
+    \item $V_m$ -- напряжение на обмотках привода;
+    \item $i_m$ -- ток на обмотках привода;
+    \item $n$ -- скорость вращения вала;
     \item $L_a, R_a$ -- индуктивность и сопротивление обмоток, соответственно;
     \item $K_m$ -- коэффициент крутящего момента мотора;
     \item $J_m$ -- момент инерции ротора.
 \end{itemize}
 
-Поскольку электрическая постоянная времени $T_a=L_a/R_a$ мала по сравнению с механической постоянной времени мотора, допустимо следующее предположение:
-\begin{equation}
+Поскольку электрическая постоянная времени $T_a=L_a/R_a$ \cite{10.1109/48.838987} мала по сравнению с механической постоянной времени мотора, допустимо следующее предположение:
+\begin{equation*}
     \frac{L_a}{R_a}\frac{d}{dt}i_m \approx 0
-\end{equation}
+\end{equation*}
 \noindent следовательно динамику движителя можно упростить до следующего состояния:
-\begin{gather}
+\begin{equation}
     \label{eq:motor_dynamics}
-    0 = -R_a i_m-K_m w_m + V_m \\
-    J_m\dot{n} = K_m i_m - Q
-\end{gather}
-
-При различных методах управления приводом, возможно представление его динамики в различной записи.
+    \begin{array}{rl}
+        0 &= -R_a i_m-K_m w_m + V_m \\
+        J_m\dot{n} &= K_m i_m - Q
+    \end{array}
+\end{equation}
 
 \subsection{Методы управления приводом движителя ПА}
 Анализ опыта разработки систем управления движением НПА и систем динамического позиционирования судов подтверждает наличие трех вариантов управления движителями: управление по моменту электропривода, управление по оборотам ГВ и управление по упору \cite{костенко2020исследование, костенко2019разработка, sorensen20003}.
@@ -245,11 +252,11 @@
 
 Большое исследование эффективности работы подруливающих движителей АНПА с формированием обобщенной модели влияния скорости и направления набегающего потока на аппарат было проведено в рамках работы \cite{palmer2008modelling} а так же в последующей докторской работе этого же автора \cite{palmer2009analysis}.
 
-В упомянутых научных работых было показано что падение эффективности подруливающего движителя не связано с уменьшеньем эффективности самого устроства, а скорее с взаимодействием пропульстивной струи, которую создает подруливающий движитель с набегающим на ПА потоком.
+В упомянутых научных работых было показано что падение эффективности подруливающего движителя не связано с уменьшеньем эффективности самого устройства, а скорее с взаимодействием пропульсивной струи, которую создает подруливающий движитель, с набегающим на ПА потоком.
 
-Работа подруливающего движителя ПА в случае если он находится в состоянии покоя полностью эквивалентна модели маршевого движителя, т.е. на аппарат действует определенная сила (упор) приложенная к точке крепления движителя за счет формирования пропульсивной струи ПА.
+Работа подруливающего движителя ПА при отсутствии поперечного потока полностью эквивалентна модели маршевого движителя, т.е. на аппарат действует определенная сила (упор) приложенная к точке крепления движителя за счет формирования пропульсивной струи ПА.
 Но в случае, когда ПА движется с продольной скоростью $u$, то пропульсивная струя формируемая подруливающим движителем формирует гидродинамическую тень (на рисунке закрашена серым цветом) на корпусе ПА в области за подруливающей шахтой (рисунок \ref{fig:modelling-tunnel}).
-За счет этого формируется разность давлений между различными областями ПА, которая, в свою очередь, формирует силу $F_S$ обратную по направлению силе создаваемой подруливающим движителем $F_T$.
+За счет этого формируется разность давлений между различными областями ПА, которая, в свою очередь, формирует силу $T_S$ обратную по направлению силе создаваемой подруливающим движителем $T_T$.
 
 \begin{figure}[ht]
     \centering
@@ -260,7 +267,7 @@
 
 При низких и средних скоростях продольного движения ПА, когда формируемая подруливающим движителем скорость пропульсивной струи существенно выше скорости АНПА наклон струи незначителен, гидродинамическая тень мала и соответственно мала и сила создаваемая разностью давлений на корпус ПА.
 При высоких скоростях движения ПА, когда скорость набегаемого на АПНА потока сопоставима или выше по скорости чем скорость создаваемой подруливающим движителем пропульсивной струи, её наклон существенно выше, как и создаваемая гидродинамическая тень и общая эффективность подруливающего движителя падает значительно.
-Важно так же учитывать что с увеличением гидродинамической тени точка приложения разности давлений начинает сдвигаться и результирующий момент действующий на аппарат формируемый силой $F_S$ меняется.
+Важно так же учитывать что с увеличением гидродинамической тени точка приложения разности давлений начинает сдвигаться и результирующий момент действующий на аппарат формируемый силой $T_S$ меняется.
 
 При этом разница давлений вокруг входа в туннель подруливающего движителя и вокруг выходом из него не оказывают значительного влияния на эффективность подруливающего движителя \cite{brix1973lateral}.
 
@@ -268,14 +275,14 @@
 В ходе эксперимента авторы получили коэффициенты эффективности упора $K_F$ создаваемого подруливающим движителем и момента сопротивления вращению гребного винта $K_N$.
 Они определяются следующим образом:
 \begin{equation*}
-	K_F = \frac{T_{u/u_j}}{T_0}; \: K_N = \frac{N_{u/u_j}}{N_0}
+	K_T = \frac{T_{u/u_j}}{T_0}; \: K_N = \frac{N_{u/u_j}}{N_0}
 \end{equation*}
 \noindent где $T_{u/u_j}$ и $N_{u/u_j}$ упор и момент сопротивления вращению при набегающем потоке, а $T_0$ $N_0$ -- при его отсутствии.
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{modelling/Эксперимент - Kt Kn подруливающий движитель.png}
-    \caption{Коэффициенты $K_F$, $K_N$ подруливающего движителя, полученные в ходе натурных экспериментов.}
+    \caption{Коэффициенты $K_T$, $K_N$ подруливающего движителя, полученные в ходе натурных экспериментов.}
     \label{fig:tunnel_effectivness}
 \end{figure}
 
@@ -288,7 +295,7 @@
     \label{eq:thrust_tunnel}
 	T_S = T_T (1 - \exp \left[ -c \left( \frac{u}{u_j}^2 \right) \right])
 \end{equation}
-\noindent где:
+\noindent где
 \begin{itemize}
 	\item $T_S$ -- сила действующая на аппарат в связи с разностью давлений;
 	\item $T_T$ -- упор создаваемый подруливающим движителем;
@@ -297,34 +304,34 @@
 	\item $c$ -- коэффициент подавления упора.
 \end{itemize}
 
-В свою очередь скорость пропульсивной струи, создаваемой работой подруливающего движителя может быть определена следующим уравнением:
+В свою очередь скорость пропульсивной струи, создаваемой работой подруливающего движителя, может быть определена следующим уравнением \cite{palmer2009analysis}:
 \begin{equation}
     \label{eq:jetflow_speed}
-	u_j = \sqrt{\frac{T_T}{\rho A}}
+	u_j = \sqrt{\frac{T_T(v=0)}{\rho A}}
 \end{equation}
-\noindent где $\rho$ -- плотность воды, $A=\pi R^2$, где $R$ -- диаметр гребного винта подруливающего движителя.
+\noindent где $T_T(v=0)$ -- упор создаваемый подруливающим движителем в отсутствии набегающего потока, $\rho$ -- плотность воды, $A=\pi R^2$, где $R$ -- радиус гребного винта подруливающего движителя.
 
 Момент действующий на ПА формируемый упором движителя и гидродинамической силой определяется следующим образом:
 \begin{equation*}
 	M = T_T x_T + (T_T-T_S)x_S
 \end{equation*}
-\noindent где $x_T$ -- расстояние между ЦП подводного аппарата и точкой приложения силы $T_T$, а в свою очередь $x_S$ - это расстояние между ЦП ПА и точкой приложениия силы $T_S$, которая определяется следующим образом:
+\noindent где $x_T$ -- расстояние между ЦМ подводного аппарата и точкой приложения силы $T_T$, а в свою очередь $x_S$ - это расстояние между ЦМ ПА и точкой приложениия силы $T_S$, которая определяется следующим образом:
 \begin{equation*}
 	x_S = x_T - kD\frac{u}{u_j}
 \end{equation*}
 \noindent где $D$ -- диаметр туннеля подруливающего движителя, $k$ -- некоторый коэффициент.
 
-Кроме величины набегающего потока на эффективность подруливающего движителя так же влияет угол атаки, т.е. разница между вектором скорости ПА и вектором скорости набегающего потока, которая возникает в случае несоосного течения или в ходе переходных процессов по курсу следования ПА.
-В работе \cite{palmer2008modelling} представлена модель зависимости упора создаваемого подруливающим движителем от скорости набегающего потока и угла атаки.
+Кроме скорости набегающего потока на эффективность подруливающего движителя так же будет оказывать влияние угол дрейфа.
+В работе \cite{palmer2008modelling} представлена модель зависимости упора создаваемого горизнтальным подруливающим движителем от скорости набегающего потока и угла дрейфа.
 
 \section{Модель рулевых устройств ПА}
 В техническом отчете \cite{steenson2011control} подробно представлен расчет подъемной силы для АНПА ``Dolphin 2'', в котором ДРК состоит из четырех кормовых рулей нормального расположения и четырех подруливающих движителей (2-х вертикальных и 2-х горизонтальных).
 
-Подъемная сила формируемая горизонтальными рулевыми устройствами в стационарном случае определяется следующим выражением:
-\begin{equation}
+Подъемная сила формируемая горизонтальными рулевыми устройствами определяется следующим выражением:
+\begin{equation*}
     F_{lift} = \frac{1}{2}\rho v^2 A_{SP} C_{LSP}
-\end{equation}
-\noindent где:
+\end{equation*}
+\noindent где
 \begin{itemize}
     \item $\rho$ -- плотность воды;
     \item $v$ -- скорость продольного движения АНПА;
@@ -333,10 +340,10 @@
 \end{itemize}
 
 В свою очередь, подъемный коэффициент РУ $C_{LSP}$ быть расcчитан следующим образом:
-\begin{equation}
+\begin{equation*}
     C_{LSP} = a_{sp}\alpha \left( \frac{2 \pi}{1 + (2/AR)} \right)
-\end{equation}
-\noindent где:
+\end{equation*}
+\noindent где
 \begin{itemize}
     \item $a_{sp}$ -- коэффициент подъемной силы (1/$^\circ$);
     \item $\alpha$ -- угол поворота РУ относительно потока жидкости;
@@ -344,19 +351,19 @@
 \end{itemize}
 
 Соотношение сторон РУ $AR$ определяется следующим образом:
-\begin{equation}
+\begin{equation*}
     AR = k \frac{S}{\bar{c}}
-\end{equation}
+\end{equation*}
 \noindent где $S$ -- площадь РУ, $\bar{c}$ -- среднее значение длины РУ (chord), а коэффициент $k$ определяет влияние щели между РУ и корпусом ПА. Если щель отсутствует, то $k=2$, При отношении ширины щели к длине РУ около $0.1$ коэффициент $k\approx1.5$
 
 Угол $\alpha$ определяет положение РУ относительно потока воды, в случае управления по глубине, можно эту переменную переписать следующим образом:
-\begin{equation}
-    \alpha = \delta - \theta
-\end{equation}
-\noindent где $\delta$ -- угол перекладки ГУ относительно ССК, $\theta$ -- текущий дифферент АНПА.
+\begin{equation*}
+    \alpha = \delta - \psi
+\end{equation*}
+\noindent где $\delta$ -- угол перекладки ГУ относительно ССК, $\psi$ -- текущий дифферент АНПА.
 
 Традиционным конструктивным и эксплуатационным решением РУ является использование кормовых рулей и элеронов, хотя при малых скоростях движения находят применение и дополнительные рули глубины.
-Управляющие моменты рулей являются функцией угла перекладки и скорости набегающего потока, при этом дополнительные силы лобового сопротивления не учитывается при анализе управления.
+Управляющие моменты рулей являются функцией угла перекладки и скорости набегающего потока, при этом дополнительные силы лобового сопротивления не всегда учитывается при анализе управления.
 Модель РУ определяется следующими соотношениями \cite{боженов1986}:
 \begin{equation}
 	\label{eq:modelling-rudder}
@@ -366,7 +373,7 @@
     M_z^{rud} = m_z^{\delta} \cdot \delta_{H} \frac{\rho V^2}{2} U
     \end{array}
 \end{equation}
-\noindent где:
+\noindent где
 \begin{itemize}
     \item $M_x^{rud}, M_y^{rud}, M_z^{rud}$ -- управляющие моменты РУ по крену, курсу и дифференту, соответственно;
     \item $m_x^{\delta}, m_y^{\delta}, m_z^{\delta}$ -- производные гидродинамических характеристик от перекладки рулей крена, направления и глубины, соответственно;
@@ -386,13 +393,9 @@
 \begin{figure}[ht]
     \centering
     \includegraphics[width=1.0\linewidth]{modelling/Моделирование - маршевый движитель схема.png}
-    \caption{Блочно-визуальная модель численного моделирования маршевого движетеля ПА.}
+    \caption{Блочная модель численного моделирования маршевого движетеля ПА.}
     \label{fig:modelling-thruster}
 \end{figure}
-
-\begin{noteplan}
-    Откорректировать картинку с учетом ``динамики гребного винта''
-\end{noteplan}
 
 \begin{table}
     \caption{Параметры маршевого движителя АНПА ``ММТ-3000''.}
@@ -411,16 +414,18 @@
         \multicolumn{3}{c}{Параметры электромотора} \\
         \midrule
         % Коэффициент момента, Н$\cdot$м/А & Km & 0,16\\
-        Момент инерции ротора, кг$\cdot$м$^2$ & Jrot & 2,5$\cdot$10$^{-4}$ \\
+        \makecell[l]{Момент инерции ротора \\
+        с учётом ГВ и присоед. \\ массы воды, кг$\cdot$м$^2$} & Jrot & 2,5$\cdot$10$^{-4}$ \\
         Сопротивление обмоток, Ом & Ranchor & 1,5 \\
         Электрическая постоянная, c & Tem & 0,0004 \\
-        Коэффициент ЭДС, В/рад/с & Ce & 0,16 \\
+        \makecell[l]{Коэффициент \\ 
+        противо-ЭДС, В/рад/с} & Ce & 0,16 \\
         \bottomrule
     \end{tabular}
 \end{table}
 
 В рамках реализованной модели движителя был проведен анализ влияния соосного набегающего потока на упор создаваемый маршевым движителем при различных кодах управления (рисунок \ref{fig:modelling-thruster-velocity}), кроме того была явным образом расчитана зависимость упора создаваемого движителем от скорости набегающего потока для фиксированых значений кода управления (рисунок \ref{fig:modelling-thruster-code}).
-Видно, что создаваемый упор существенно зависит от набегающего потока и при больших скоростях движения падает почти в 2 раза.
+Видно, что создаваемый упор существенно зависит от набегающего потока и при скорости движения 2 м/с падает почти в 2 раза.
 
 \begin{figure}[ht]
     \centering
@@ -429,14 +434,10 @@
     \label{fig:modelling-thruster-velocity}
 \end{figure}
 
-\begin{noteplan}
-    Поменять цвета в графике \ref{fig:modelling-thruster-velocity}.
-\end{noteplan}
-
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{modelling/Моделирование - маршевый движитель скорость.png}
-    \caption{Численное моделирование упора создаваемого маршевым движителем при различных параметрах кода управления.}
+    \caption{Численное моделирование установившегося  упора создаваемого маршевым движителем при различных параметрах кода управления.}
     \label{fig:modelling-thruster-code}
 \end{figure}
 
@@ -450,13 +451,13 @@
 \end{equation*}
 \noindent где $T_T$ -- упор сформированный работой подруливающего движителя, а $T_S$ представляет собой сила действующую на ПА из-за формирорования пропульсивной струёй подруливающего движителя гидродинамической тени на корпусе ПА (выражение \ref{eq:thrust_tunnel}).
 
-В рамках моделирования коэффицент $c$ был принят с величиной 5.0.
-В рамках реализованной модели подруливающего движителя был проведен численное моделирование влияния соосного набегающего потока на эффективное значение упор создаваемый подруливащим движителем при различных значениях набегающего потока (рисунок \ref{fig:modelling-tunnel-velocity})
+В рамках моделирования коэффицент $c$ был принят с величиной 5.0 \cite{palmer2009experimental}.
+В рамках реализованной модели подруливающего движителя было проведено численное моделирование эффективного значение упора создаваемого подруливащим движителем при различных значениях набегающего потока (рисунок \ref{fig:modelling-tunnel-velocity}).
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{modelling/Моделирование - подруливающий движитель скорость.png}
-    \caption{Численное моделирование эффективного упора создаваемого подруливающим движителем при различных скоростях набегающего потока.}
+    \caption{Численное моделирование установившегося эффективного упора создаваемого подруливающим движителем при различных скоростях набегающего потока.}
     \label{fig:modelling-tunnel-velocity}
 \end{figure}
 
@@ -464,13 +465,16 @@
 В соответствии с моделью руля управления (уравнение \ref{eq:modelling-rudder}) была составлена численная модель при этом коэффициент производной гидродинамической характеристики руля был взят за $0.0001$.
 Результаты численного моделирования момента создаваемого рулем управления при различных скоростях набегающего потока представлены на рисунке \ref{fig:modelling-rudder-velocity}.
 
-\begin{noteplan}
-    Добавить модель руля аппарата Delphin 2. И её промоделировать.
-\end{noteplan}
+% \begin{notequestion}
+%     Мне кажется коэффициент производной гидродинамической характеристики может быть абсолютно любой. Это качественно не повлияет на характер зависимости.
+%     Для с - добавил ссылку.
+% \end{notequestion}
 
-\begin{noteplan}
-    Добавить швартовую характеристику АНПА ММТ-3000.
-\end{noteplan}
+% \begin{notequestion}
+%     Скорость пропульсивной струи определяется по уравнению \ref{eq:jetflow_speed}.
+%     Не очень понял про выдуманность этого уравнения.
+%     Нет ссылки на источник?
+% \end{notequestion}
 
 \begin{figure}[ht]
     \centering
@@ -480,6 +484,10 @@
 \end{figure}
 
 \section{Выводы по главе 2}
-\begin{noteplan}
-	Тут будет про то что проведено моделирование, показано что все ИМ очень сильно зависят от скорости набегающего потока и угла атаки и днейфа.
-\end{noteplan}
+Во второй главе приведены математические модели исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК ПА учитывающие особенности их работы в набегающем потоке.
+Показано что эффективность работы ИМ существенным образом зависят от скорости набегающего потока. 
+Приведены результаты численного моделирования работы ИМ.
+
+Упор маршевых движителей линейно зависит от скорости набегающего потока и для представленных в разделе параметров ИМ падает в два раза на скорости набегающего потока 2 м/с относительно упора формируемого в ходе швартовных испытаний.
+
+Эффективный упор создаваемый подруливающими движителями падает экспоненциально и для представленных в разделе параметров ИМ падает до около нулевых значений при скорости набегающего потока 1.5 м/с.
