--- a/Dissertation/partVelocity.tex
+++ b/Dissertation/partVelocity.tex
@@ -6,7 +6,7 @@
     T(n, J_0) = K_T (J_0) \rho D^4 n |n|\\
     Q(n, J_0) = K_Q (J_0) \rho D^5 n |n|
 \end{gather*}
-\noindent где:
+\noindent где
 \begin{itemize}
     \item $K_T (J_0), K_Q (J_0)$ -- соответственно, коэффициенты упора и момента;
     \item $D$ -- диаметр винта;
@@ -15,10 +15,10 @@
 \end{itemize}
 
 Переменная $J_0$ представляет собой относительную поступь и определяется следующим уравнением:
-\begin{equation}
+\begin{equation*}
     \label{eq:ratio_1}
     J_0 = \frac{v_a}{nD}
-\end{equation}
+\end{equation*}
 \noindent где $v_a$ -- скорость набегающего потока воды относительно ПА.
 Эта скорость не совсем равна скорости аппарата $v$ и в устоявшемся режиме связана с ней следующим соотношением \cite{lewis1988principles}:
 \begin{equation*}
@@ -29,10 +29,9 @@
 Более подробно параметр $w$ представлен в работе \cite{10.1016/s1474-6670-17-46514-1} которая опирается лекционные заметки \cite{walderhaug1992motstand}:
 
 \begin{equation*}
-    \label{eq:ambient_flow}
     v_a = (1-w)u = (1 - w_w - w_p - w_v)v
 \end{equation*}
-\noindent где:
+\noindent где
 \begin{itemize}
     \item $w_p$ -- составная часть коэффициента попутного потока отражающая влияние так называемых потенциальных эффектов связанных с влиянием движения корпуса судна или ПА на скорость движения воды;
     \item $w_v$ -- составная часть коэффициента попутного потока отражающая влияние вязких эффектов из-за влияния пограничных слоев.
@@ -60,34 +59,14 @@
 \noindent где $K_T^{bp}, K_Q^{bp}$ -- коэффициенты упора и момента гребного винта полученные в результате швартовых испытаний движителя.
 
 Из определения линейной аппроксимации коэффициента момента (\ref{eq:torque_linear}) и относительной поступи (уравнение \ref{eq:ratio_1}) можно выразить скорость набегающего потока следующим образом:
-\begin{equation}
-    v = \frac{1}{\beta_1} n D \left( K_Q^{bp} - K_Q \right)
-\end{equation}
-
-С другой стороны динамика электропривода подводного движителя стандартно представляется следующими дифференциальными уравнениями:
 \begin{equation*}
-    \begin{array}{rl}
-        L_a\dot{I} &=-R_aI-C_e n + V \\
-        J_m\dot{n} &= C_m I - Q
-    \end{array}
+    v = \frac{1}{\beta_1} n D \left( K_Q^{bp} - K_Q \right)
 \end{equation*}
-\noindent где:
-\begin{itemize}
-    \item $V$ -- напряжение подводнимое к мотору;
-    \item $I$ -- ток в обмотках;
-    \item $n$ -- частота вращения вала электропривода;
-    \item $Q$ -- момент на валу;
-    \item $C_m$ -- коэффициент момента электропривода;
-    \item $R_a$ -- активное сопротивление обмоток электропривода;
-    \item $L_a$ -- индуктивность обмоток электропривода;
-    \item $С_e$ -- коэффициент самоиндукции;
-    \item $J_m$ -- момент инерции вала.
-\end{itemize}
 
-Соответственно в установившемся режиме момент на валу движителя прямо пропорционален току на его обмотках:
-\begin{equation}
-    Q = C_mI
-\end{equation}
+С другой стороны, согласно модели электропривода подводного движителя представленного в выражении \ref{eq:motor_model} в установившемся режиме работы момент сопротивления вращению на валу движителя прямо пропорционален току на его обмотках:
+\begin{equation*}
+    Q = K_mI
+\end{equation*}
 
 % Важно учесть что, при релейном управлении фазами бесколлекторного двигателя коэффициент $K_m$ не является постоянной величиной и имеет обратно экспоненциальную зависимость от времени между переключениями фаз. 
 % Эта зависимость хорошо описывается следующим уравнением в установившемся режиме работы мотора:
@@ -104,12 +83,6 @@
     \label{eq:velocity_final}
     u = \frac{1}{\beta_1} \left( K_Q^{bp} n D - K_m\frac{I}{\rho D^4|n|n} \right)
 \end{equation}
-\noindent где 
-\begin{itemize}
-    \item $K_Q^{bp}$ -- коэффициент момента сопротивления вращению гребного винта рассчитанный в ходе швартовных испытаний движителя; \item $\beta_1$ -- линейный коэффициент полиномиальной аппроксимации коэффициента момента сопротивления вращению $K_Q$;
-    \item $I$ -- ток на обмотках электропривода движителя;
-    \item $n$ -- скорость вращения вала электропривода;
-\end{itemize}
 
 \section{Учёт пространственной ориентации маршевых движителей при оценке скорости набегающего потока}
 В случае, если подводный аппарат оснащён единственным маршевым движителем, а маневрирование обеспечивается рулями управления в режиме крейсерской скорости или при помощи подруливающих движителей в позиционном режиме или в режиме малых скоростей, то формула \ref{eq:velocity_final} может обеспечить оценку скорости набегающего потока.
@@ -131,7 +104,7 @@
     \label{eq:velocity_orientation}
     u^i = \frac{u^i_t}{\cos{\psi^i_t}\cos{\theta^i_t}}
 \end{equation}
-\noindent где:
+\noindent где
 \begin{itemize}
     \item $u^i$ -- скорость набегающего потока на АНПА, т.е. это определяет скорость движения АНПА относительно воды;
     \item $u^i_t$ -- скорость набегающего потока на движитель $i$;
@@ -139,29 +112,33 @@
     \item $\theta^i_t$ -- отклонение движителя от продольной оси аппарата в вертикальной плоскости плоскости;
 \end{itemize}
 
-Но такая конфигурация маршевой группы движителей позволяет определять не только скорость набегающего потока, как в случае единственного маршевого движителя, но так же и углы атаки и дрейфа.
+% Но такая конфигурация маршевой группы движителей позволяет определять не только скорость набегающего потока, как в случае единственного маршевого движителя, но так же и углы атаки и дрейфа.
 
-Пусть аппарат оснащен симметричной маршевой группой, состоящей из двух вертикальных и двух горизонтальных движителей.
-Каждый из отклонён от продольной оси аппарата на $\delta$. 
-Пусть на аппарат набегает поток величиной $u$ и при этом угол атаки ПА в ССК $\alpha$ и угол дрейфа $\beta$.
-В этом случае скорости детектиуремые на движителях определяются следующими зависимостями:
-\begin{equation*}
-    \left\{
-    \begin{array}{l}
-        v_l = v \cos{(\delta - \beta)} \\
-        v_r = v \cos{(\delta + \beta)} \\
-        v_u = v \cos{(\delta - \alpha)} \\
-        v_d = v \cos{(\delta + \alpha)}
-    \end{array}
-    \right.
-\end{equation*}
+% Пусть аппарат оснащен симметричной маршевой группой, состоящей из двух вертикальных и двух горизонтальных движителей.
+% Каждый из отклонён от продольной оси аппарата на $\delta$. 
+% Пусть на аппарат набегает поток величиной $u$ и при этом угол атаки ПА в ССК $\alpha$ и угол дрейфа $\beta$.
+% В этом случае скорости детектиуремые на движителях определяются следующими зависимостями:
+% \begin{equation*}
+%     \left\{
+%     \begin{array}{l}
+%         v_l = v \cos{(\delta - \beta)} \\
+%         v_r = v \cos{(\delta + \beta)} \\
+%         v_u = v \cos{(\delta - \alpha)} \\
+%         v_d = v \cos{(\delta + \alpha)}
+%     \end{array}
+%     \right.
+% \end{equation*}
 
-Из представленной системы уравнений несложно получить что угол атаки и угол дрейфа можно описать следующими выражениями:
+% Из представленной системы уравнений несложно получить что угол атаки и угол дрейфа можно описать следующими выражениями:
 
-\begin{gather}
-    \beta = \arctan{\left[\frac{1}{\tan{\delta}}\frac{v_l-v_r}{v_l+v_r}\right]} \\
-    \alpha = \arctan{\left[\frac{1}{\tan{\delta}}\frac{v_u-v_d}{v_u+v_d}\right]}
-\end{gather}
+% \begin{gather}
+%     \alpha = \arctan{\left[\frac{1}{\tan{\delta}}\frac{v_u-v_d}{v_u+v_d}\right]} \\
+%     \beta = \arctan{\left[\frac{1}{\tan{\delta}}\frac{v_l-v_r}{v_l+v_r}\right]}
+% \end{gather}
+
+% \begin{notequestion}
+%     А вот эти уравнения надо проверять.
+% \end{notequestion}
 
 % Кроме этого, так же важно учесть, что при наличии ненулевых углов атаки $\alpha$ и дрейфа $\beta$ в скоростной системе координат идентифицируемые скорости на различных движителях будут различны и это необходимо учитывать.
 
@@ -229,13 +206,13 @@
     \end{tabular}
 \end{table}
 На рисунке \ref{fig:motor_load_test} продемонстированы результаты проведения нагрузочных испытаний электродвигателя.
-Хоть зависимость между моментом на валу электропривода и значением тока на обмотках мотора зависит явно линейно, коэффициент момента $C_m$ различен для разных значений кода управления.
+Хоть зависимость между моментом на валу электропривода и значением тока на обмотках мотора зависит явно линейно, коэффициент момента $K_m$ различен для разных значений кода управления.
 Это поведение хорошо описывается уравнением:
 \begin{equation*}
-    C_m(k) = \frac{C_m^0}{k}
+    K_m(k) = \frac{K_m^0}{k}
 \end{equation*}
-\noindent где $C_m^0$ -- некоторая постоянная, а $k$ -- код управления электроприводом.
-Результаты аппроксимации значения коэфициента момента от кода управления для $C_m^0 = 15.2$ приведены на рисунке \ref{fig:function_cm}.
+\noindent где $K_m^0$ -- некоторая постоянная, а $k$ -- код управления электроприводом.
+Результаты аппроксимации значения коэфициента момента от кода управления для $K_m^0 = 15.2$ приведены на рисунке \ref{fig:function_cm}.
 
 \begin{figure}[ht]
     \centering
@@ -252,10 +229,10 @@
 \end{figure}
 
 \subsection{Параметры гребного винта}
-В качестве гребного винта на АНПА ``ММТ-3000'' был использован стандартный трехлопастной винт, который изготавливается путем отливки из пластика.
-Первичные гидродинамические коэффициенты винта $K_T, K_Q$ были заранее получены регрессионным анализом по его геометрическим параметрам.
+В качестве гребного винта на АНПА ``ММТ-3000'' был использован специально изготовленный трехлопастной винт.
+Первичные гидродинамические коэффициенты винта $K_T, K_Q$ определены в соответствии с методикой Дайдолла.
 Они показаны на рисунке \ref{fig:mmt3000_propeller} вместе с их линейной аппроксимацией в диапазоне относительной поступи 0-0.5, где 0.5 соответствует скорости АНПА примерно 1,5 м/с и скорости вращения гребного винта 22 об/сек.
-Все расчетные параметры гребного винта представлены в таблице \ref{tab:mmt3000_propeller}.
+Все основные параметры гребного винта представлены в таблице \ref{tab:mmt3000_propeller}.
 
 \begin{table}
     \caption{Параметры гребного винта движителей маршевой группы АНПА ``ММТ-3000''
@@ -288,13 +265,13 @@
 \subsection{Анализ результатов швартовных испытаний маршевых движителя}
 В рамках исследования был проведён анализ результатов швартовных испытаний движителя, в результате чего были получены значения усилия создаваемые движителем и потребляемый при этом ток в зависимости от задаваемого кода управления.
 
-Код управления движителем представляет собой целое число находящееся в пределах от -127 до 127, где диапазон от 0 до 127 пропорционально изменяет эффективное значение напряжения на моторе в диапазоне от 0 до 24В, а диапазон от 0 до -127 формирует аналогичное напряжение но с обратным направлением вращения вала мотора.
+Код управления движителем представляет собой целое число находящееся в пределах от -127 до 127, где диапазон от 0 до 127 пропорционально изменяет эффективное значение фазного напряжения на моторе в диапазоне от 0 до 24В, а диапазон от 0 до -127 формирует аналогичное напряжение но с обратным направлением вращения вала мотора.
 
 На рисунке \ref{fig:mmt3000_bollardpul} показана величина упора создаваемого движителем от значения кода управления публикуемого в систему управления движителем.
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.8\linewidth]{velocity/MMT3000 - швартовные испытания движителя.png}
-    \caption{Зависимость упора создаваемого движителем от кода управления.}
+    \caption{Статическая характеристики движителя в швартовном режиме.}
     \label{fig:mmt3000_bollardpul}
 \end{figure}
 
@@ -347,11 +324,6 @@
 \end{figure}
 
 \subsection{Анализ гидродинамических характеристик АНПА по результатам натурных испытаний}
-
-\begin{notequestion}
-    Не уверен по поводу названия главы. Ведь речь не о ГДХ, мы же проводим оценку скорости.
-\end{notequestion}
-
 В качестве данных для анализов использовались калибровочные запуски АНПА ``ММТ-3000'' для расчета ГДХ подводного аппарата, полученные в 2019 году в заливе Патрокл.
 Для расчета ГДХ были проведены запуски подводного аппарата на фиксированной глубине со ступенчатым изменением скорости продольного движения.
 График изменения скорости представлен на рисунке \ref{fig:mmt3000_velocity} и соответствующее изменение относительной поступи винта с поправкой на пространственную ориентацию движителей представлена на рисунке \ref{fig:advance_ratio}.
@@ -395,7 +367,7 @@
     \label{eq:b1_search}
     min\left\{ \sum_{i=0}^N\left( v_d - v_i \right)^2 \right\}
 \end{equation}
-\noindent где:
+\noindent где
 \begin{itemize}
     \item $N$ -- количество движителей маршевой группы;
     \item $v_d$ -- продольная скорость движения АНПА полученная от датчика доплеровского лага;
@@ -424,3 +396,10 @@
 \end{figure}
 
 \section{Выводы по главе 3}
+Разработан метод оценки скорости набегающего потока в установившемся режиме движения АНПА по изменению параметров работы движителей маршевой группы.
+Предложена методика уточнения параметров ГВ по результатам швартовных испытаний движителей и калибровочным запускам АНПА.
+
+Предложенный метод позволяет оценить скорость движения АНПА относительно потока в случае отсутствия основного датчика скорости или выхода его из строя.
+
+Была проведена верификация метода на обработке данных запусков АНПА ``ММТ-3000''.
+После уточнения параметров ГВ на калибровочной части маршрута, расхождение оцениваемой скорости с эталонными показаниями доплеровского лага составило не более чем 0.18 м/с на переходных режимах и не более чем 0.1 м/с на установившихся режимах движения со среднеквадратичным отклонением $\sigma=0.17$ м/с.
