--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -27,7 +27,7 @@
 @inproceedings{костенко2020анализ,
   title={Анализ различных подходов к распределению управляющих воздействий подводного аппарата},
   author={Костенко, ВВ and Толстоногов, АЮ},
-  booktitle={Материалы конференции {\guillemotleft}Управление в морских системах{\guillemotright}(УМС-2020). СПб.: АО {\guillemotleft}Кон-церн {\guillemotleft}ЦНИИ {\guillemotleft}Электроприбор{\guillemotright}, 2020. 200 с. В настоящий сборник вошли тексты докладов, состоявшихся на конференции {\guillemotleft}Управление в морских системах{\guillemotright}(УМС-2020). Тексты публикуются в авторской редакции.},
+  booktitle={Материалы конференции {\guillemotleft}Управление в морских системах{\guillemotright}(УМС-2020). СПб.: АО {\guillemotleft}Кон-церн {\guillemotleft}ЦНИИ {\guillemotleft}Электроприбор{\guillemotright}, 2020. 200 с.},
   pages={64},
   language = {russian},
   authorconf = {true}
