--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -706,7 +706,7 @@
 
 @inproceedings{армишев86,
   title={Исследование структуры движительных комплексов подводных аппаратов},
-  author={Армишев С.В.},
+  author={Армишев, С.В.},
   booktitle={Подводные аппараты и роботы},
   publisher={М. Ин-т океанологии им П.П. Ширшова АН СССР},
   year={1986},
@@ -1192,5 +1192,43 @@
   author={Fossen, Thor I},
   year={2011},
   publisher={John Wiley \& Sons},
+  language={english}
+}
+
+@article{воловодов2005особенности,
+  title={Особенности решения задачи распределения ресурсов управления при пространственном позиционировании некоторых морских подвижных объектов},
+  author={Воловодов, СК and Черняев, МГ and Смольников, АВ and Каверинский, АЮ and Воловодов, СС},
+  journal={Гироскопия и навигация},
+  number={1},
+  pages={43--56},
+  year={2005},
+  publisher={Акционерное общество" Концерн" Центральный научно-исследовательский институт~…},
+  language={russian}
+}
+
+@article{pal2016modeling,
+  title={Modeling, analysis and design of a dc motor based on state space approach},
+  author={Pal, Debabrata},
+  journal={International Journal of Engineering Research \& Technology (IJERT)},
+  volume={5},
+  number={2},
+  year={2016},
+  language={english}
+}
+
+@article{palmer2009experimental,
+  title={Experimental testing of an autonomous underwater vehicle with tunnel thrusters},
+  author={Palmer, Alistair and Hearn, Grant E and Stevenson, Peter},
+  year={2009},
+  language={english}
+}
+
+@inproceedings{zhao2015torque,
+  title={A torque control strategy of brushless direct current motor with current observer},
+  author={Zhao, Long and Zhang, Xiaobin and Ji, Junhong},
+  booktitle={2015 IEEE International Conference on Mechatronics and Automation (ICMA)},
+  pages={303--307},
+  year={2015},
+  organization={IEEE},
   language={english}
 }
