--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,5 +1,5 @@
 {\actuality}
-Задача управления ДРК (control allocation в иностранной терминологии) возникает естественным образом для избыточного (over-actuated) ДРК ПА, то есть такого ДРК в котором ИМ (рули управления, основные и подруливающие движители) больше чем количество доступных для управления степеней свободы. Использование ДРК такого типа широко распространено по следующим причинам:
+Задача управления ДРК (control allocation в иностранной терминологии) возникает естественным образом для избыточного (over-actuated) ДРК ПА, то есть такого ДРК в котором ИМ (рули управления, маршевые и подруливающие движители) больше чем количество доступных для управления степеней свободы. Использование ДРК такого типа широко распространено по следующим причинам:
 
 \begin{itemize}
     \item в виду того, что подводные операции сопряжены с высокой степенью риска, избыточность необходима для реализации функций резервирования систем управления движением подводного аппарата;
@@ -11,14 +11,14 @@
 Исторически первой эта задача возникла в двух областях: для систем управления многостепенными манипуляторами \cite{craig2009introduction} и самолётами \cite{bordignon1996constrained}. 
 Основной целью тогда было создание систем аккомодации, то есть формирования такой системы управления движением, которая была бы устойчива к выходу из строя отдельных исполнительных механизмов.
 
-В общем случае задача управления ДРК для случая избыточных систем управления ведет к задаче численной оптимизации с линейными ограничениями, решение которой сложно реализовать для управляющих контуров в условиях операционных систем реального времени.
+В общем случае задача управления ДРК для случая избыточных систем управления ведет к задаче численной оптимизации с линейными ограничениями, решение которой сложно реализовать для управляющих контуров в условиях операционных систем реального времени в виду особенностей итерационного поиска многих методов решения оптимизационных задач \cite{burken2001two}.
 
 {\progress}
 В настоящее время имеется достаточное количество обзорных статей в иностранной научной литературе, посвященных задаче управления ДРК, включая как отдельные приложения – суда и подводные аппараты \cite{fossen2006survey}, летательные средства \cite{oppenheimer2006control}, так и междисциплинарные \cite{10.1016/j.automatica.2013.01.035} в рамках которой рассматриваются различные методы управления ДРК в приложении к различным областям робототехники.
 В отечественной литературе такая постановка задачи обычно не выделяется в отдельный класс \cite{филаретов2016особенности} и, например, задача аккомодации к отказам исполнительных механизмов решается в рамках управления объектом целиком \cite{мартынова2020подход, зыбин2014аналитическое}.
 Впрочем, упоминание задачи управления ДРК можно найти в отдельных статьях \cite{амбросовский2013распределение, воловодов2003распределение, амбросовский2014алгоритмы} и главах диссертаций \cite{власов2016адаптивное}.
 
-Актуальность задачи управления ДРК описана в большей степени в трудах зарубежных ученых: Wayne C. Durham \cite{durham1993constrained, bordingnon1995closed, durham1994constrained, durham2001computationally} Ola Härkegård \cite{10.1016/j.automatica.2004.09.007, harkegaard2003backstepping, harkegaard2004dynamic}, коллектива учёных Thor I. Fossen и Tor A. Johansen (\cite{fossen2006survey, 10.1016/j.automatica.2013.01.035, 10.1109/tcst.2003.821952}), Alessandro Baldini \cite{baldini2018constrained, baldini2020constrained}, Edin Omerdic \cite{ahmad2007control, omerdic2020geometric, capocci2018fault}, Mehdi Naderi \cite{naderi2019guaranteed, naderi2019fault} и др.
+Актуальность задачи управления ДРК описана в трудах отечественных ученых Армишева С.В. \cite{армишев86} Воловодова С.К. \cite{воловодов2003распределение,воловодов2005особенности} Амбрасовского В.М. \cite{амбросовский2013распределение}, а также в трудах зарубежных ученых: Wayne C. Durham \cite{durham1993constrained, bordingnon1995closed, durham1994constrained, durham2001computationally} Ola Härkegård \cite{10.1016/j.automatica.2004.09.007, harkegaard2003backstepping, harkegaard2004dynamic}, коллектива учёных Thor I. Fossen и Tor A. Johansen (\cite{fossen2006survey, 10.1016/j.automatica.2013.01.035, 10.1109/tcst.2003.821952}), Alessandro Baldini \cite{baldini2018constrained, baldini2020constrained}, Edin Omerdic \cite{ahmad2007control, omerdic2020geometric, capocci2018fault}, Mehdi Naderi \cite{naderi2019guaranteed, naderi2019fault} и др.
 
 {\object} является движительно-рулевой комплекс автономного необитаемого подводного аппарата.
 
@@ -40,36 +40,31 @@
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item изучить модели описания исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК подводного аппарата учитывающие особенности их работы в набегающем потоке;
-  \item разработать метод формального описания, анализа и реконфигурации в режиме реального времени ДРК, оснащенного произвольным набором исполнительных механизмов;
-  \item разработать и реализовать метод определения скорости набегающего потока по параметрам работы электроприводов маршевых движителей;
-  \item разработать и реализовать энергетически оптимальный отказоустойчивый метод управления ДРК для АНПА устойчивый к неполному знанию скорости набегающего потока;
-  \item разработать и реализовать метод плавного управления ДРК при переходах между различными типами движения;
-  \item провести проверку эффективности разработанного метода управления ДРК на базе модельных экспериментов.
+  \item Изучить модели описания исполнительных механизмов (маршевые движители, подруливающие движители, рули управления) ДРК подводного аппарата учитывающие особенности их работы в набегающем потоке;
+  \item Разработать и реализовать метод оценки скорости движения ПА относительно набегающего потока по параметрам работы электроприводов маршевых движителей;
+  \item Разработать и реализовать энергетически оптимальный метод управления ДРК для АНПА адаптивный к различным типам движения ПА;
+  \item Провести проверку эффективности разработанного метода управления ДРК на базе модельных экспериментов.
 \end{enumerate}
-\begin{noteplan}
-    Думаю задачи в самом конце оформим более подробно. Пока черновик.
-\end{noteplan}
 
 {\novelty}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item разработан метод определения скорости движения подводного аппарата относительно воды в установившемся режиме по изменению параметров работы маршевых движителей;
-  \item разработан метод формирования глобальных границ и коэффициентов решения задачи оптимального управления ДРК адаптивный к скорости набегающего потока и точности его определения;
-  \item разработан метод управления ДРК при вариации скоростей движения многофункционального АНПА и выходе из строя элементов ДРК.
+  \item Разработан метод оценки скорости движения ПА относительно набегающего потока по изменению параметров работы маршевых движителей в установившемся режиме движения.
+  В результате обработки данных запусков АНПА ``ММТ-3000'' расхождение скорости оцененной по предлагаемому методу с эталонными показаниями доплеровского лага составило не более чем 0.18 м/с на переходных режимах и не более чем 0.1 м/с на установившихся режимах движения.
+  \item Предложен новый метод энергетический оптимального управления ДРК ПА, который учитывает особенности работы исполнительных механизмов в набегающем потоке и способен адаптивно перераспределять управляющие воздействия при вариациях скорости.
+  По сравнению с используемым в АНПА ``ММТ-300'', предлагаемый метод позволяет обеспечивать более широкий диапазон управления и позволяет удерживать заданный момент при более высоких значениях целевой скорости.
 \end{enumerate}
-\begin{noteplan}
-    В новизне надо будет показать конкретные числовые преимущества каждого из предложений по сравнению с существующими вариантами. Уже по результатам моделироваия и испытаний будет на чистовую написано.
-\end{noteplan}
-{\influence} \ldots
+% \begin{noteplan}
+%     В новизне надо будет показать конкретные числовые преимущества каждого из предложений по сравнению с существующими вариантами. Уже по результатам моделироваия и испытаний будет на чистовую написано.
+% \end{noteplan}
+{\influence} разработанных методов заключается в надежном определении скорости движения АНПА в набегающем потоке и в обеспечении непрерывного перераспределения управляющих команд ДРК при различных вариациях скорости движения подводного аппарата.
 
 {\methods} В диссертационной работе использовались методы теории управления, линейной и нелинейной оптимизации; методы математического и имитационного моделирования, современные средства разработки программных комплексов и моделирования.
 
 {\defpositions}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item Метод формального описания избыточного ДРК подводного аппарата с произвольным количеством и типом ИМ, а также его реализация;
-  \item метод оценки скорости движения подводного аппарата относительно воды в установившемся режиме по изменению параметров работы электропривода его маршевых движителей;
-  \item метод энергоэффективного и отказоустойчивого управления ДРК подводного аппарата адаптивный к скорости набегающего потока и точности его определения;
-  \item программная реализация метода управления ДРК при вариации скорости движения многофункционального АНПА.
+  \item Метод оценки скорости движения ПА относительно набегающего потока по изменению параметров работы маршевых движителей в установившемся режиме движения;
+  \item Метод энергетический оптимального управления ДРК ПА, который учитывает особенности работы исполнительных механизмов в набегающем потоке и способен адаптивно перераспределять управляющие воздействия при вариациях скорости;
+  \item Программная реализация энергетически-оптимального управления ДРК адаптивного к вариациям скорости.
 \end{enumerate}
 
 {\reliability} Достоверность полученных выводов определяется корректным применением методов математического моделирования сложных систем и обработки экспериментальных данных. Обоснованность полученных методов и алгоритмов основывается на сопоставлении полученных результатов с результатами, полученными другими известными методами и алгоритмами.
@@ -80,17 +75,12 @@
 \begin{enumerate}
     \item ``Управление в морских и аэрокосмических системах (УМАС-2016)'' (Санкт-Петербург, 04–06 октября 2016 года);
     \item Всероссийская научно-техническая конференция ``Технические проблемы освоения мирового океана'' (г. Владивосток, 2017);
-    \item ``International Symposium on Underwater Technology, UT'' (Haeundae, Busan, 21–24 февраля 2017 года);
-    \item ``2018 OCEANS - MTS/IEEE Kobe Techno-Oceans, OCEANS - Kobe 2018'' (Kobe, 28–31 мая 2018 года);
     \item Всероссийская научно-техническая конференция ``Технические проблемы освоения мирового океана'' (г. Владивосток, 30 сентября – 3 октября 2019 г.);
     \item ``2019 IEEE International Underwater Technology Symposium, UT 2019'' (Kaohsiung, 16–19 апреля 2019 года);
     \item Международная конференция по промышленному инжинирингу и современным технологиям ``FarEastCon-2019'' (г. Владивосток, 1-4 сентября 2019 года);
     \item Международная конференция по промышленному инжинирингу и современным технологиям ``FarEastCon-2020'' (г. Владивосток, 5-8 октября 2019 года);
-    \item ``Global Oceans 2020: Singapore - U.S. Gulf Coast'' (5-14 октября 2020 года);
+    \item Конференци ``Управление в морских системах'' (УМС-2000) в рамках 13-й мультиконференции по проблемам управления (МКПУ-2020) (г. Санкт-Петербург, 6-8 Октября 2020 г.).
 \end{enumerate}
-\begin{noteplan}
-    В обсуждениях пока без разбору все конференции что вспомнил.
-\end{noteplan}
 
 {\contribution} Автор принимал участие в постановке цели и задач по теме исследования, разработал и реализовал программно методы и алгоритмы, предложенные в данной работе, обработал и проанализировал экспериментальные данные, участвовал в обсуждении полученных результатов, подготовке научных статей, материалов конференций, участвовал на конференциях и семинарах.
 
