--- a/common/concl.tex
+++ b/common/concl.tex
@@ -2,8 +2,8 @@
 %% 5.3.3 В заключении диссертации излагают итоги выполненного исследования, рекомендации, перспективы дальнейшей разработки темы.
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 \begin{enumerate}
-  \item На основе анализа \ldots
-  \item Численные исследования показали, что \ldots
-  \item Математическое моделирование показало \ldots
-  \item Для выполнения поставленных задач был создан \ldots
+  \item Предложен новый метод оценки скорости движения АНПА относительно набегающего потока по изменению параметров работы движителей маршевой группы в установившемся режиме движения. Метод позволяет оценить скорость движения АНПА относительно потока в случае отсутствия основного датчика скорости или выхода его из строя.
+  \item Проведена верификация предолженного метода оценки скорости набегающего на обработке данных запусков АНПА ``ММТ-3000''. После уточнения параметров ГВ на калибровочной части маршрута, расхождение оцениваемой скорости с эталонными показаниями доплеровского лага составило не более чем 0.18 м/с на переходных режимах и не более чем 0.1 м/с на установившихся режимах движения со среднеквадратичным отклонением $\sigma=0.17$ м/с.
+  \item Предложен новый алгоритм управления ДРК подводного аппарата, который учитывает особенности работы исполнительных механизмов в набегающем потоке и способен адаптивно перераспределять управляющие воздействия при вариациях скорости.
+  \item Показано что предложеный метод управления ДРК обеспечивает более высокую скорость работы по сравнению со стандартными подходами к решению задачи управления ДРК через формирование линейной и квадратичной оптимальной задачи при сопосповимой области допустимых значений. По сравнению с используемым в АНПА ``ММТ-300'', предлагаемый метод позволяет обеспечивать более широкий диапазон управления и позволяет удерживать заданный момент при более высоких значениях целевой скорости.
 \end{enumerate}
