--- a/Dissertation/partStatement.tex
+++ b/Dissertation/partStatement.tex
@@ -1,10 +1,10 @@
 \chapter{Обзор современных подходов к решению задачи управления ДРК ПА} \label{ch:Statement}
 \section{Формулировка задачи управления ДРК ПА}\label{sec:Statement/ProblemStatement}
 Пусть динамика подводного аппарата, оснащенного избыточным ДРК, определена в формулировках метода пространства состояний следующим образом:
-\begin{equation}
+\begin{equation*}
     \vect{\dot{x}}(t) = a(\vect{x}(t)) + B_u(\vect{x}(t))\vect{u}(t)
-\end{equation}
-\noindent где:
+\end{equation*}
+\noindent где
 \begin{itemize}
     \item $\vect{x}(t) \in \mathspace{R}^n$ -- вектор состояния системы;
     \item $\vect{u}(t) \in \mathspace{U} \subset{\mathspace{R}}^k$ -- вектор управления исполнительными механизмами (control input), где подмножество $\mathspace{U}$ можно интерпретировать как ограничение величины команд управления, вызванное насыщением статической характеристики движителей, механическими ограничениями угла поворота рулей или иными особенностями ИМ;
@@ -22,24 +22,26 @@
 \noindent где обе матрицы $B_{\nu}(\vect{x})$ и $B(\vect{x})$ обладают рангом $m$.
 Это ведёт к новому описанию динамической системы \ref{eq:dynamic_statespace}, которое может быть представлено следующим образом:
 
-\begin{gather}
+\begin{equation}
     \label{eq:dynamic_statespace_new}
-    \vect{\dot{x}}(t) = a(\vect{x}(t)) + B_{\vec{\nu}}(\vect{x}(t))\vect{\nu}(t) \\
-    \vect{\nu}(t) = B(\vect{x}(t))\vect{u}(t)
-\end{gather}
+    \begin{array}{l}
+        \vect{\dot{x}}(t) = a(\vect{x}(t)) + B_{\vec{\nu}}(\vect{x}(t))\vect{\nu}(t) \\
+        \vect{\nu}(t) = B(\vect{x}(t))\vect{u}(t)
+    \end{array}
+\end{equation}
 \noindent где $\vect{\nu}(t) \in \mathspace{A} \subset \mathspace{R}^n$ можно интерпретировать как обобщенное действие всех исполнительных механизмов на объект управления или вектор виртуального управления (virtual input), а подмножество $\mathspace{A}$ получается аффинным преобразованием из подмножества $\mathspace{U}$ под действием матрицы $B(x)$.
 
-Удобно раскладывать матрицу $B_u$ таким образом, чтобы матрица $B_{\nu}$ была квадратной ($n=m$). При этом матрица будет полноранговой, а решение уравнения для первой части системы \ref{eq:dynamic_statespace_new} единственным. В качестве вектора управления удобно использовать обобщенный вектор сил и моментов, действующих на объект управления в связанной с ним системе координат (ССК). При $n=6$ его можно определить как $\vect{\nu} = [f_x,f_y,f_z,m_x,m_y,m_z]^T$ где $f_x,f_y,f_z$ -- проекции сил затребованных системой управления движением на продольную поперечную и нормальную оси связанной с аппаратом системе координат, а $m_x,m_y,m_z$ -- соответствующие затребованные проекции моментов. 
+Удобно раскладывать матрицу $B_u$ таким образом, чтобы матрица $B_{\nu}$ была квадратной ($n=m$). При этом матрица будет полноранговой, а решение уравнения для первой части системы \ref{eq:dynamic_statespace_new} единственным. В качестве вектора управления удобно использовать обобщенный вектор сил и моментов, действующих на объект управления в связанной с ним системе координат (ССК). При $n=6$ его можно определить как $\vect{\nu} = [f_x,f_y,f_z,m_x,m_y,m_z]^T$ где $f_x,f_y,f_z$ -- проекции сил затребованных системой управления движением на продольную поперечную и нормальную оси связанной с аппаратом системы координат, а $m_x,m_y,m_z$ -- соответствующие затребованные проекции моментов. 
 
 Тем не менее, матрица $B(\vect{x})$ в случае избыточного ДРК остается недоопределённой. Фактически это ведет к тому что для вектора $\nu_c$, который был затребован системой управления, может быть неопределённое множество решений уравнения \ref{eq:dynamic_statespace_new}.
 
 Задача поиска оптимального вектора управления движением может быть поставлена в рамках обоих вариантов описания системы представленных выше.
 Пусть задача оптимального управления поставлена в рамках квадратичной оптимизации, тогда для описания \ref{eq:dynamic_statespace} задача будет сформулирована следующим образом \cite{10.1016/j.automatica.2004.09.007}
 
-\begin{gather}
+\begin{gather*}
     \min \int_0^{\infty} \left[ q(x) + u^T R_u(x) u \right] dt \\
     \text{при условии } u \in \mathspace{U} \notag
-\end{gather}
+\end{gather*}
 \noindent где $q(\vect{x}) \geq 0, R_u(\vect{x}) = R_u^T(\vect{x}) \geq 0$ -- некоторые критерии оптимизации.
 
 При этом описание \ref{eq:dynamic_statespace_new} естественным образом ведет к постановке двух независимых оптимизационных задач, которые могут быть записаны следующим образом:
@@ -49,11 +51,11 @@
     \min \left( ||Q_s|| + J(\vect{x}, \vect{u}, t) \right) \label{eq:Statement/AllocationProblem} \\
     \text{при условии } \vect{\nu}-B(\vect{x})\vect{u} = \vect{s}, u \in \mathspace{U} \notag
 \end{gather}
-\noindent где:
+\noindent где
 \begin{itemize}
     \item $q(\vect{x}) \geq 0, R_{\nu}(\vect{x}) = R_{\nu}^T(\vect{x}) \geq 0$ -- некоторые коэффициенты оптимизации;
     \item $s$ -- невязку вектора виртуального управления, которая определяет меру различия между заданным и сформированным вектором управления;
-    \item $Q_s$ -- матрица, формализующая приоритеты работы тех или иных осей управления при выходе вектора $\nu$ за пределы допустимого множества $\mathspace{A}$.
+    \item $Q_s$ -- матрица, формализующая приоритеты работы того или иного канала управления при выходе вектора $\nu$ за пределы допустимого множества $\mathspace{A}$.
     \item $J(\vect{x}, \vect{u}, t)$ -- некоторый функционал качества.
 \end{itemize}
 
@@ -69,9 +71,9 @@
 Отдельно стоит упомянуть случай при $k-n < 0$ для системы \ref{eq:dynamic_statespace}. Такой случай подразумевает, что исполнительных механизмов ДРК меньше чем размерность вектора состояния системы, такие системы можно назвать дефицитными (under-actuated system), а соответствующие ей матрица $B_u$ является переопределённой или плохо обусловленной. В этом случае задача управления ДРК тесно связана с системой управления движением ПА, и её сложно сформулировать обособленно. Отдельные примеры решения этой задачи для различных типов АНПА представлены в литературе \cite{10.1049/iet-cta.2009.0265, 10.1109/cdc.2002.1184546}.
 
 \section{Методы решения задачи управления ДРК}\label{sec:Statement/Methods}
-Существует достаточно много подходов к постановке и решению задачи управления ДРК \cite{костенко2020методы}.
-В рамках данного обзора они разделены на две большие группы.
-В первую группу отнесены те задачи, в которых вектор виртуального управления пропорционален вектору управления ИМ, то есть $\vect{\nu}(t) = B \vect{u}(t)$, и это допущение было сделано в формулировке задачи управления ДРК. Но в то же время существует отдельная группа систем, где это допущение не может быть принято.
+Существует достаточно много подходов к постановке и решению задачи управления ДРК.
+В рамках данного обзора \cite{костенко2020методы} они разделены на две большие группы.
+В первую группу отнесены те задачи, в которых вектор виртуального управления пропорционален вектору управления ИМ, то есть $\vect{\nu}(t) = B \vect{u}(t)$, и это допущение было сделано в формулировки задачи управления ДРК. Но в то же время существует отдельная группа систем, где это допущение не может быть принято.
 \subsection{Линейные системы исполнительных механизмов ДРК}
 
 В подавляющем большинстве случаев к этой группе относят практически все телеуправляемые необитаемые подводные аппараты (ТНПА) с фиксированными движителями, а также большая часть АНПА оснащенных фиксированными движителями и/или рулями управления \cite{костенко2017разработка, костенко2019задача}.
@@ -85,20 +87,20 @@
 Отдельным случаем является аналитическое решение задачи при отсутствии ограничений на управляющие команды, т.е. $\vect{u} \in \mathspace{R}^k$.
 Такая ситуация отчасти является синтетической, но может быть к ней сведена подбором специальных контуров управления с затяжными переходными процессами.
 При отсутствии ограничений на команды управления, оптимизационная задача может быть на основе метрики $L_2$ (евклидова норма):
-\begin{gather}
+\begin{gather*}
     \min \frac{1}{2}(\vect{u} - \vect{u_p})W(\vect{u} - \vect{u_p}) \\
     \text{при } \vect{\nu}_c = B\vect{u} \notag
-\end{gather}
+\end{gather*}
 \noindent где $\vect{u_p}$ -- желаемое значение вектора управления ИМ в случае отсутствия управления, а $W$ -- диагональная матрица положительно определённых весовых коэффициентов.
 
 Решение данной задачи может быть получено аналитическим образом и имеет следующий вид \cite{fossen1991adaptive}:
-\begin{equation}
+\begin{equation*}
     \vect{u} = (I-CB)\vect{u}_p + C \nu_c
-\end{equation}
+\end{equation*}
 \noindent где $I$ -- единичная матрица, а матрица $C$ определяется следующим выражением:
-\begin{equation}
+\begin{equation*}
     C = W^{-1}B^T(BW^{-1}B^T)^{-1}
-\end{equation}
+\end{equation*}
 
 Это решение возможно только если матрица $B$ является невырожденной, но зачастую, это не так или она может стать вырожденной при отказах отдельных элементов движительно-рулевого комплекса. В этом случае в практической реализации нормальной является практика записи матрицы $C$ в следующей форме:
 \begin{equation}
@@ -110,38 +112,38 @@
 \subsubsection{Прямое управление ДРК с масштабированием} \label{sssec:AllocationFix}
 Данный подход не обеспечивает оптимального решения, но позволяет получить его в условиях линейных ограничений $\vect{u} \in \mathspace{U} \subset \mathspace{R}^k$ накладываемых на исполнительные механизмы.
 Данный метод подразумевает поиск такого набора линейных положительных сжимающих коэффициентов $\vect{\alpha} \in [0,1]$, при котором решение задачи управления ДРК не выходит за рамки допустимого множества $\mathspace{U}$ \cite{durham1993constrained}, при этом новая линейная оптимизационная задача ставится следующим образом:
-\begin{gather}
+\begin{gather*}
     \max \vect{\alpha} \\
     \text{при условии } B\vect{u} = \vect{\alpha} \vect{\nu_c}, \vect{\alpha} \vect{\nu_c} \in \mathspace{A}
-\end{gather}
+\end{gather*}
 
 Решение задачи поиска такого набора сжимающих коэффициентов встречается в зарубежной литературе \cite{bordingnon1995closed, petersen2002fast}.
 
 Одна из вариаций данного подхода, которая используется в аппаратах Института проблем морских технологий ДВО РАН формулируется следующим образом \cite{костенко2015вопросу}.
 Пусть $\nu_c^{prio}$ представляет собой команду управления $\nu_c$ в которой оси расставлены в соответствии с уменьшением степени приоритета, $l=[l_1,l_2, \ldots, l_m]$ где $l_i \in [0,1]$ представляет собой набор коэффициентов насыщения $i$-ой оси управления, а $u^{ub}$ представляет собой решение задачи управления ДРК без ограничений, полученное в соответствии с выражением \ref{eq:allocation_unbound}. Тогда можно решить задачу управления ДРК итерационным методом с фиксированным количеством шагов. Так для оси с максимальным приоритетом, т.е. для $v_c^1$ сжимающий коэффициент будет записан следующим образом:
-\begin{equation}
+\begin{equation*}
     \alpha_1 = \min \left\{ \frac{l_1 \cdot u_j^{lim}}{u_j^{ub}} \right\}_{j=1}^k
-\end{equation}
+\end{equation*}
 \noindent где $u_j^{lim}$ представляет собой максимальный значение команды управления $j$-го исполнительного механизма. Для простоты, считаем что характеристика  исполнительного механизма симметрична, т.е. $u_j^{lim} = u_j^+ = u_j^-$
 
 Для осей с меньшим приоритетом, т.е. для $i>1$ в наборе $\nu_c^{prio}$, расчёт сжимающего коэффициента будет записан следующим образом:
-\begin{equation}
+\begin{equation*}
     \alpha_i = \min \left\{ \frac{\min (l_1 \cdot u_j^{lim}, u_j^{lim} - u_j^{prev})}{u_j^{ub}} \right\}_{j=1}^k
-\end{equation}
+\end{equation*}
 \noindent где $u_j^{prev}$ представляет собой команду управления, которая была рассчитана для $j$-го исполнительного механизма на предыдущих итерациях алгоритма расчёта и определяется следующим образом:
-\begin{equation}
+\begin{equation*}
     u_j^{prev} = \sum_{k=0}^{i-1} \alpha_k u_k^{ub}
-\end{equation}
+\end{equation*}
 
 \subsubsection{Квадратичная оптимизация}
 Выбор функционала   второго порядка в уравнении описывающем управляемую систему \ref{eq:dynamic_statespace_new} можно легко привести к записи задачи квадратичной оптимизации в каноничной форме (метрика $L_2$ или евклидова норма):
-\begin{equation}
+\begin{equation*}
     \min_{u,s} \frac{1}{2}\left(\vect{u^T}, \vect{s^T}\right) H 
     \begin{pmatrix}
         \vect{u} \\
         \vect{s}
     \end{pmatrix}
-\end{equation}
+\end{equation*}
 \noindent где $H = 2 \cdot diag(q_1,\ldots,q_k, w_1,\ldots,w_m)$ представляет собой диагональную матрицу положительно определённых весовых коэффициентов для ИМ ДРК ($q_1,\ldots,q_k$) и элементов вектора виртуального управления ($w_1,\ldots,w_m$).
 
 В данной постановке задачи используются различные математические методы поиска решения, например, метод активного набора (active set) или метод внутренней точки (interior point).
@@ -157,14 +159,14 @@
 
 В рамках нового подхода, динамическая задача управления ДРК (dynamic control allocation) приобрела новую формальную запись:
 
-\begin{equation}
+\begin{equation*}
     \left\{
     \begin{matrix*}[l]
     \dot{\vect{\omega}}(t) = \vect{\mu}(t) \\
     \vect{u}(t) = B^+\vect{\nu}(t) + B_{\perp} \dot{\vect{\omega}}(t), \vect{u}_c(t) \equiv B^+\vect{\nu}(t)
     \end{matrix*}
     \right.
-\end{equation}
+\end{equation*}
 \noindent где
 \begin{itemize}
     \item $\vect{\omega}(t) \in \mathspace{R}^{k-m}$ -- вектор состояния распределителя (allocator state);
@@ -185,10 +187,10 @@
 
 Задача управления ДРК в данном подходе записывается следующим образом \cite{10.1109/icca.2011.6137940}. Пусть исполнительные механизмы ДРК представлены в формулировках метода пространства состояний следующим образом:
 
-\begin{equation}
+\begin{equation*}
     \dot{\vect{u}}(t) = A_u\vect{u}(t) + B_u \vect{u}_{cmd}(t)
-\end{equation}
-\noindent где:
+\end{equation*}
+\noindent где
 \begin{itemize}
     \item $A$ и $B$ -- блочно-диагональные матрицы описывающие динамику исполнительных элементов;
     \item $\vect{u}_{cmd}(t)$ -- вектор управления ИМ;
@@ -197,27 +199,27 @@
 
 Тогда постановка задачи управления ДРК на базе прогнозирующей модели будет выглядеть следующим образом:
 
-\begin{equation}
+\begin{equation*}
 \begin{matrix*}[c]
     \dot{\vect{u}}(t) = A_u\vect{u}(t) + B_u\vect{u}_{cmd}(t) \\
     \text{при условии} \\
     \vect{\nu}_c(t) = B \vect{u}(t), \vect{u} \in \mathspace{U}
 \end{matrix*}
-\end{equation}
+\end{equation*}
 
 Для предсказания состояния на горизонт времени $N$ набора исполнительных механизмов $\vect{u}(t)$ используется дискретная запись:
-\begin{equation}
+\begin{equation*}
     \begin{matrix*}[c]
     \widehat{\vect{u}} = \left[ \widehat{\vect{u}}(k+1|k), \dots, \widehat{\vect{u}}(k+N|k)) \right] \\
     \end{matrix*}
-\end{equation}
+\end{equation*}
 
 где $N$ представляет собой размер горизонта предсказания, а $k$  текущий временной отрезок.
 Для заданного горизонта предсказания множество решений вектора управления ИМ ДРК $u_{cmd}^*$ может быть найдено путем минимизации квадратичного функционала, который записан следующим образом:
-\begin{eqnarray}
+\begin{eqnarray*}
     J(\cdot) = \sum_{j=1}^N W(j) \left[ \widehat{\vect{\nu}}(k+j|k) - \vect{\nu^{*}}(k+j) \right]^2 + \notag \\ 
     + \sum_{j=1}^{N-1} \sum_{i=1}^{k}W_a(i)\left[ \vect{u}_{cmd,i}(k+j-1|k) \right]^2
-\end{eqnarray}
+\end{eqnarray*}
 
 где $W{j}$ представляет собой матрицу весовых коэффициентов которая отражает значимость минимизации невязки с целевой командой управления $\vect{\nu}^*$ в момент времени $j$. В свою очередь весовой коэффициент $W_a(i)$ отражает стоимость использования $i$-го исполнительного механизма.
 
@@ -241,19 +243,19 @@
 
 \subsubsection{Динамический поиск оптимума}
 В работе \cite{10.1109/cdc.2004.1429240} автором предлагается переформулировать задачу поиска оптимального управления ДРК как поиск управляющей функции Ляпунова. В частности, пусть задан функционал $J'(\vect{x}, \vect{u}, t) = J(\vect{x}, \vect{u}, t) + \delta(\vect{u})$, где $\delta(\vect{u})$ представляет собой специальную штрафную функцию которая удерживает $\vect{u}$ в рамках подпространства $\mathspace{U}$. Тогда функция Ляпунова будет записана следующим образом:
-\begin{equation}
+\begin{equation*}
     L(\vect{x}, \vect{u}, t, \lambda) = J'(\vect{x}, \vect{u}, t) + \lambda^T(\nu_c - h(\vect{u},\vect{x},t))
-\end{equation}
+\end{equation*}
 \noindent где $\lambda$ -- множитель Лагранжа.
 
 Пусть существует функция управления Ляпунова $V_0(\vect{x},t)$ (Control-Lyapunov function) которая была сформирована системой управления НПА, тогда задача оптимального управления ДРК при этом подходе будет записана следующим образом:
-\begin{equation}
+\begin{equation*}
     V(\vect{x}, \vect{u}, t, \lambda) = \sigma V_0(\vect{x}, t) + \frac{1}{2}
     \left(
     \frac{\partial L^T}{\partial \vect{u}} \frac{\partial L}{\partial \vect{u}} 
     + \frac{\partial L^T}{\partial \lambda} \frac{\partial L}{\partial \lambda}
     \right)
-\end{equation}
+\end{equation*}
 \noindent где $\sigma$ -- некоторый множитель.
 
 Этот подход был развит позже для задачи управления ДРК для нелинейных ИМ с учетом их динамики \cite{10.4173/mic.2008.2.4}.
@@ -269,23 +271,23 @@
     \item MPT (Multi-Parametric Toolbox) -- специальный бесплатный пакет к MATLAB включающий в себя реализацию оптимального управления линейными, гибридными и нелинейными системами. Может быть задан линейный и квадратичный функционал качества. Есть автоматическая генерация кода на языке С \cite{kvasnica2004multi}.
 \end{itemize}
 
-\section{Особенности отказоустойчивых методов управления ДРК}\label{sec:Propulsion/FaultToulerant}
-\begin{noteplan}
-    Тут будет потом про обзор про отказоустойчивость на уровне управления ДРК. Таких статей достаточно много.
-\end{noteplan}
+% \section{Особенности отказоустойчивых методов управления ДРК}\label{sec:Propulsion/FaultToulerant}
+% \begin{noteplan}
+%     Тут будет потом про обзор про отказоустойчивость на уровне управления ДРК. Таких статей достаточно много.
+% \end{noteplan}
 
 \section{Постановка цели и задач исследования}\label{sec:Statement/SetProblems}
 
 Задачу управления движением подводного аппарата можно ставить различными способами.
 Один из них заключается в разделении задачи на две независимых, которые решаются последовательно: управление движением НПА и управление исполнительными механизмами.
-Показано, что при такой декомпозиции управления оптимальность решения сохраняется.
+Показано \cite{10.1016/j.automatica.2004.09.007}, что при такой декомпозиции управления оптимальность решения сохраняется.
 В главе приведены различные подходы и методы решения задачи управления ДРК в зависимости от его типа.
 Кроме того, представлены программные пакеты, которые позволяют реализовать рассмотренные подходы в компьютерах и встраиваемых системах. 
 
 Описываемая задача представляется достаточно проработанной, но в тоже время существует большой пласт особенностей динамики ИМ, которые до сих пор не учтены в представленных подходах:
 \begin{itemize}
-    \item при формировании динамических моделей исполнительных механизмов явным образом не выражены параметры электроприводов. В работах не учитывается, что коэффициент полезного действия электромотора существенно зависит от скорости вращения вала привода;
-    \item динамическая модель ИМ не учитывает сильную зависимость параметров исполнительных механизмов от скорости набегающего потока, хотя это важный параметр для работы всех исполнительных механизмов. Так например в работе \cite{palmer2008modelling} показано что из-за гидродинамических особенностей эффективность ПА существенно падает с возрастанием скорости набегающего потока.
+    \item при формировании моделей исполнительных механизмов явным образом не выражены параметры электроприводов. В работах не учитывается, что коэффициент полезного действия электромотора существенно зависит от скорости вращения вала привода;
+    \item модель ИМ не учитывает сильную зависимость параметров исполнительных механизмов от скорости набегающего потока, хотя это важный параметр для работы всех исполнительных механизмов. Так например в работе \cite{palmer2008modelling} показано что из-за гидродинамических особенностей эффективность подруливающего движителя существенно падает с возрастанием скорости набегающего потока.
 \end{itemize}
 
 \textbf{Целью диссертационной работы} является разработка методов энергоэффективного и отказоустойчивого управления избыточным движительно-рулевым комплексом подводного аппарата с учётом динамики исполнительных механизмов и их гидродинамических особенностей.
@@ -300,12 +302,8 @@
   \item провести проверку эффективности разработанного метода управления ДРК на базе модельных экспериментов.
 \end{enumerate}
 
-\begin{notequestion}
-    По целям и задачам. Я ориентируюсь на диссертацию Самотыловой 19-го года. Она методологически очень хорошо написана. Там именно так. Цели и задачи во введении (это для тех кто дальше введения не читает) и они же в первой главе (как логичное продолжение обзора).
-\end{notequestion}
-
 \section{Выводы по главе 1}\label{sec:Statement/Conclusion}
-В первой главе приводится обзор современных методов и подхов к решению задачи оптимального управления ДРК.
+В первой главе приведен обзор современных методов и подхов к решению задачи оптимального управления ДРК.
 
 Отмечено, что хоть тема достаточно проработана, но в работах почти никак не фигурируют гидродинамические особенности работы исполнительных механизмов в набегающем потоке и уменьшение их результирующей силы, что будет детально рассмотрено в следующих главах диссертации.
 
